--- a/cn.zh-CN/产品定价/规格与定价.md
+++ b/cn.zh-CN/产品定价/规格与定价.md
@@ -32,13 +32,49 @@ POLARDB支持以下两种付费方式：
 
     **说明：** POLARDB for MySQL 8.0公测中，[点此申请](https://page.aliyun.com/form/act951838896/index.htm)。
 
-    |节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|中国大陆地域|中国香港地域|
-    |:---|:------|:-----|:----|----|------|-----|------|------|
+    |节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|
+    |:---|:------|:-----|:----|----|------|-----|
     |polar.mysql.x2.medium| 2核
 
  4GB
 
- |5TB|1,200|1Gbps|8000|1Gbps| 280元/月
+ |5TB|1,200|1Gbps|8000|1Gbps|
+    |polar.mysql.x4.large| 4核
+
+ 16GB
+
+ |10TB|5,000|10Gbps|32,000|4Gbps|
+    |polar.mysql.x4.xlarge| 8核
+
+ 32GB
+
+ |10TB|10,000|10Gbps|64,000|8Gbps|
+    |polar.mysql.x8.xlarge| 8核
+
+ 64GB
+
+ |30TB|10,000|10Gbps|72,000|10Gbps|
+    |polar.mysql.x8.2xlarge| 16核
+
+ 128GB
+
+ |50TB|20,000|10Gbps|128,000|16Gbps|
+    |polar.mysql.x8.4xlarge| 32核
+
+ 256GB
+
+ |50TB|64,000|10Gbps|192,000|24Gbps|
+    |polar.mysql.x8.12xlarge| 88核
+
+ 710GB
+
+ |50TB|64,000|25Gbps|256,000|32Gbps|
+
+    **说明：** 2核4GB的集群为入门级，用于测试、体验和极小负载的场景，高负载的生产环境不建议使用。生产环境推荐使用8核32GB或以上规格的集群。
+
+    |节点规格|中国大陆|中国香港|新加坡|
+    |:---|----|----|---|
+    |polar.mysql.x2.medium| 280元/月
 
  0.59元/小时
 
@@ -46,12 +82,12 @@ POLARDB支持以下两种付费方式：
 
  0.75元/小时
 
+ | 490元/月
+
+ 1.02元/小时
+
  |
-    |polar.mysql.x4.large| 4核
-
- 16GB
-
- |10TB|5,000|10Gbps|32,000|4Gbps| 1000元/月
+    |polar.mysql.x4.large| 1000元/月
 
  2.09元/小时
 
@@ -59,12 +95,12 @@ POLARDB支持以下两种付费方式：
 
  3.44元/小时
 
+ | 1900元/月
+
+ 3.96元/小时
+
  |
-    |polar.mysql.x4.xlarge| 8核
-
- 32GB
-
- |10TB|10,000|10Gbps|64,000|8Gbps| 2000元/月
+    |polar.mysql.x4.xlarge| 2000元/月
 
  4.17元/小时
 
@@ -72,12 +108,12 @@ POLARDB支持以下两种付费方式：
 
  6.87元/小时
 
+ | 3800元/月
+
+ 7.92元/小时
+
  |
-    |polar.mysql.x8.xlarge| 8核
-
- 64GB
-
- |30TB|10,000|10Gbps|72,000|10Gbps| 3200元/月
+    |polar.mysql.x8.xlarge| 3200元/月
 
  6.67元/小时
 
@@ -85,12 +121,12 @@ POLARDB支持以下两种付费方式：
 
  8.67元/小时
 
+ | 4800元/月
+
+ 10.00元/小时
+
  |
-    |polar.mysql.x8.2xlarge| 16核
-
- 128GB
-
- |50TB|20,000|10Gbps|128,000|16Gbps| 6400元/月
+    |polar.mysql.x8.2xlarge| 6400元/月
 
  13.34元/小时
 
@@ -98,12 +134,12 @@ POLARDB支持以下两种付费方式：
 
  17.34元/小时
 
+ | 9600元/月
+
+ 20.00元/小时
+
  |
-    |polar.mysql.x8.4xlarge| 32核
-
- 256GB
-
- |50TB|64,000|10Gbps|192,000|24Gbps| 12800元/月
+    |polar.mysql.x8.4xlarge| 12800元/月
 
  26.67元/小时
 
@@ -111,12 +147,12 @@ POLARDB支持以下两种付费方式：
 
  34.67元/小时
 
+ | 19200元/月
+
+ 40.00元/小时
+
  |
-    |polar.mysql.x8.12xlarge| 88核
-
- 710GB
-
- |50TB|64,000|25Gbps|256,000|32Gbps| 35200元/月
+    |polar.mysql.x8.12xlarge| 35200元/月
 
  73.34元/小时
 
@@ -124,9 +160,11 @@ POLARDB支持以下两种付费方式：
 
  95.34元/小时
 
- |
+ | 52800元/月
 
-    **说明：** 2核4GB的集群为入门级，用于测试、体验和极小负载的场景，高负载的生产环境不建议使用。生产环境推荐使用8核32GB或以上规格的集群。
+ 110.00元/小时
+
+ |
 
     |节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|售价|
     |:---|:------|:-----|:----|----|------|-----|--|
