--- a/cn.zh-CN/产品定价/规格与定价.md
+++ b/cn.zh-CN/产品定价/规格与定价.md
@@ -253,16 +253,19 @@ POLARDB支持以下两种付费方式：
 
     存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。您可以在集群的[详情页面](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/查看数据库集群.md#)查看已使用的数据量。
 
-    -   中国大陆地域：每GB 0.00486元，按小时扣费。
-    -   中国香港地域： 每GB 0.00542元，按小时扣费。
+    -   中国大陆地域：0.00486元/GB/小时
+    -   中国香港地域：0.00542元/GB/小时
+    -   境外地域：0.00542元/GB/小时
     **说明：** 
 
     -   存储空间容量按小时扣费，不支持包年包月。
     -   每个集群规格都有对应的[最大存储容量](cn.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
 -   **SQL洞察价格**
 
-    SQL洞察按照审计日志存储的容量收取费用，每GB 0.008元，按小时扣费。
+    SQL洞察按照审计日志存储的容量收取费用。
 
+    -   中国地域：0.008元/GB/小时
+    -   境外地域：0.0122元/GB/小时
     **说明：** 审计日志的存储容量按小时扣费，不支持包年包月。
 
 -   **数据备份价格**
