--- a/cn.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md
+++ b/cn.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md
@@ -26,19 +26,25 @@
 
 1.  进入[POLARDB控制台](https://polardb.console.aliyun.com/)。
 2.  在左上角选择地域。
-3.  找到目标集群，在**操作**列中选择**升配**或**降配**。
+3.  找到目标集群，在**操作**列单击**升降配**或者在基本信息页面下方单击**升降配**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13772/156342885213607_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13772/156351818713607_zh-CN.png)
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13772/156342885334579_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13772/156351818734579_zh-CN.png)
 
-4.  选择所需的规格。
+4.  勾选**升级配置**或**降级配置**，单击**确定**。
+
+    **说明：** 仅包年包月集群支持**临时升级配置**，详情请参见[临时升配](cn.zh-CN/POLARDB for MySQL用户指南/集群管理/临时升配.md#)。
+
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13772/156351818752261_zh-CN.png)
+
+5.  选择所需的规格。
 
     **说明：** 同一集群中，所有节点的规格总是保持一致。
 
-5.  阅读并勾选**服务协议**，单击**去开通**。
+6.  勾选服务协议，单击**去支付**并完成支付。
 
-    **说明：** 集群中每个节点的规格变更需要5到10分钟的时间。
+    **说明：** 规格变更预计需要10分钟生效。
 
 
 ## 相关API {#section_z7u_5un_chs .section}
