--- a/cn.zh-CN/POLARDB for Oracle用户指南/集群管理/增加或删除节点.md
+++ b/cn.zh-CN/POLARDB for Oracle用户指南/集群管理/增加或删除节点.md
@@ -11,40 +11,62 @@
 
 **说明：** 
 
--   包年包月和按小时付费的只读节点都可以随时释放，释放后会[退款或停止计费](../cn.zh-CN/产品简介/变更配置费用说明.md#)。
--   增加节点仅收取节点规格的费用（详情请参见[规格与定价](../cn.zh-CN/产品简介/规格与定价.md#)），存储费用仍然按实际使用量收费，与节点数量无关。
+-   包年包月和按小时付费的只读节点都可以随时释放，释放后会[退款或停止计费](../cn.zh-CN/产品定价/变更配置费用说明.md#)。
+-   增加节点仅收取节点规格的费用（详情请参见[规格与定价](../cn.zh-CN/产品定价/规格与定价.md#)），存储费用仍然按实际使用量收费，与节点数量无关。
 
 ## 注意事项 {#section_wbj_c3d_lfb .section}
 
-仅当集群没有正在进行的配置变更时，才可以增加或删除只读节点。
+-   仅当集群没有正在进行的配置变更时，才可以增加或删除只读节点。
+-   为避免操作失误，每次操作只能增加或删除一个只读节点，增加或删除多个只读节点请多次操作。
 
 ## 增加只读节点 {#section_zb3_yhd_lfb .section}
 
 1.  进入[POLARDB控制台](https://polardb.console.aliyun.com/)。
 2.  选择地域。
-3.  找到目标集群，在**操作**列中单击**增节点**，或者在基本信息页面下方单击**增加节点**。
+3.  进入增删节点向导页面。您可以按照如下两种方式操作：
+    -   找到目标集群，在**操作**列单击**增删节点**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155866174634661_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156351984034661_zh-CN.png)
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155866174613618_zh-CN.png)
+    -   找到目标集群，单击集群ID，在基本信息页面下方单击**增删节点**。
 
-4.  单击![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15586617463597_zh-CN.jpg)增加一个只读节点，勾选**《云数据库 POLARDB-按小时付费服务协议》**，单击**去开通**。
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156351984013618_zh-CN.png)
+
+4.  勾选**增加节点**并单击**确定**。
+
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156351984052240_zh-CN.png)
+
+5.  单击![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15635198403597_zh-CN.jpg)增加一个只读节点，勾选服务协议，单击**去支付**并完成支付。
 
 ## 删除只读节点 {#section_fkk_13d_lfb .section}
 
-**说明：** 如果开启了SQL加速功能（即申请了SQL加速地址），则集群中需要有至少2个只读节点。如果要减少至一个只读节点，请先关闭SQL加速功能（即释放SQL加速地址）。
-
 1.  进入[POLARDB控制台](https://polardb.console.aliyun.com/)。
 2.  选择地域。
-3.  找到目标集群，在操作列中选择**…** \> **减节点**，或者在基本信息页面下方单击**减少节点**。
+3.  进入增删节点向导页面。您可以按照如下两种方式操作：
+    -   找到目标集群，在**操作**列单击**增删节点**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155866174634666_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156351984034661_zh-CN.png)
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/155866174613619_zh-CN.png)
+    -   找到目标集群，单击集群ID，在基本信息页面下方单击**增删节点**。
 
-4.  单击想要删除的节点后面的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15586617463601_zh-CN.png)，并在弹出对话框中单击**确定**。
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156351984013618_zh-CN.png)
+
+4.  勾选**删除节点**并单击**确定**。
+
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156351984052249_zh-CN.png)
+
+5.  单击想要删除的节点后面的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15635198413601_zh-CN.png)，并在弹出对话框中单击**确定**。
 
     **说明：** 集群中必须保留至少一个只读节点，以保障集群的高可用。
 
-5.  勾选**《云数据库 POLARDB-按小时付费服务协议》**，单击**确认**。
+6.  勾选服务协议，单击**确认**。
+
+## 相关API {#section_vj7_3w9_0ok .section}
+
+|API|描述|
+|:--|:-|
+|[CreateDBNodes](../cn.zh-CN/API参考/节点管理/CreateDBNodes.md#)|增加POLARDB集群节点|
+|[ModifyDBNodeClass](../cn.zh-CN/API参考/节点管理/ModifyDBNodeClass.md#)|变更POLARDB集群节点规格|
+|[RestartDBNode](../cn.zh-CN/API参考/节点管理/RestartDBNode.md#)|重启POLARDB集群节点|
+|[DeleteDBNodes](../cn.zh-CN/API参考/节点管理/DeleteDBNodes.md#)|删除POLARDB集群节点|
 
