--- a/cn.zh-CN/POLARDB for MySQL快速入门/连接数据库集群.md
+++ b/cn.zh-CN/POLARDB for MySQL快速入门/连接数据库集群.md
@@ -15,7 +15,7 @@
 1.  找到目标集群，单击集群ID，进入基本信息页面。
 2.  单击页面右上角的**登录数据库**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3019/15634290062084_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3019/15639350562084_zh-CN.png)
 
 3.  在数据库登录页面，输入主地址和端口号（以英文冒号隔开），以及高权限账号或普通账号的用户名和密码，然后单击**登录**。
 
@@ -23,7 +23,7 @@
 
     关于如何查看连接地址，请参见[查看连接地址](cn.zh-CN/POLARDB for MySQL快速入门/查看连接地址.md)。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3019/15634290062085_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3019/15639350562085_zh-CN.png)
 
 
 ## 使用客户端登录POLARDB {#section_pfm_qmq_tdb .section}
@@ -38,7 +38,7 @@
 2.  启动MySQL-Front客户端。
 3.  在**打开登录信息**窗口，单击**新建**，如下图所示。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3020/15634290062088_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3020/15639350562088_zh-CN.png)
 
 4.  输入连接信息：
     -   **名称**：MySQL-Front连接数据库的任务名称。若不填，则默认与Host一致。
@@ -52,8 +52,44 @@
 5.  单击**确定**。
 6.  在打开**登录信息**窗口，选中刚才创建的连接，单击**打开**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3020/15634290062090_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3020/15639350572090_zh-CN.png)
 
     若连接信息无误，即可成功连接POLARDB。
 
+
+## 使用命令行连接实例 {#section_aps_qgi_pku .section}
+
+如果您的服务器安装了MySQL，可以通过命令行连接POLARDB for MySQL数据库集群，连接方式如下：
+
+``` {#codeblock_v0y_qyi_iwn}
+mysql -h<连接地址> -P<端口> -u<用户名> -p<密码> -D<数据库>
+```
+
+|参数|说明|示例|
+|--|--|--|
+|-h|RDS实例的内网地址或外网地址。连接地址请参见[查看连接地址](cn.zh-CN/POLARDB for MySQL快速入门/查看连接地址.md#)。|`pc-bpxxxxxxxxxxxxxx.mysql.polardb.rds.aliyuncs.com`|
+|-P|POLARDB集群的端口号。 -   若使用内网连接，需输入POLARDB集群的内网端口。
+-   若使用外网连接，需输入POLARDB集群的外网端口。
+
+ **说明：** 
+
+-   默认端口为3306。
+-   如果端口号为默认端口，该参数可以不填。
+
+ |`3306`|
+|-u|要访问POLARDB集群的账号名称。|`root`|
+|-p|以上账号的密码。 **说明：** 该参数非必填参数。
+
+-   如果不填写该参数，后续操作中会重新要求输入密码。
+-   如果填写该参数，`-p`与数据库密码之间不能有空格。
+
+ |`password233`|
+|-D|需要登录的数据库名称。 **说明：** 
+
+-   该参数非必填参数。
+-   可以不输入`-D`仅输入数据库名称。
+
+ |`mysql`|
+
+![](images/52711_zh-CN.png "命令行连接示例")
 
