--- a/cn.zh-CN/POLARDB for Oracle用户指南/集群管理/增加或删除节点.md
+++ b/cn.zh-CN/POLARDB for Oracle用户指南/集群管理/增加或删除节点.md
@@ -18,6 +18,7 @@
 
 -   仅当集群没有正在进行的配置变更时，才可以增加或删除只读节点。
 -   为避免操作失误，每次操作只能增加或删除一个只读节点，增加或删除多个只读节点请多次操作。
+-   增加或删除节点需要5分钟左右生效。
 
 ## 增加只读节点 {#section_zb3_yhd_lfb .section}
 
@@ -26,17 +27,17 @@
 3.  进入增删节点向导页面。您可以按照如下两种方式操作：
     -   找到目标集群，在**操作**列单击**增删节点**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156351984034661_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156403335634661_zh-CN.png)
 
     -   找到目标集群，单击集群ID，在基本信息页面下方单击**增删节点**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156351984013618_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156403335613618_zh-CN.png)
 
 4.  勾选**增加节点**并单击**确定**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156351984052240_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156403335652240_zh-CN.png)
 
-5.  单击![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15635198403597_zh-CN.jpg)增加一个只读节点，勾选服务协议，单击**去支付**并完成支付。
+5.  单击![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15640333563597_zh-CN.jpg)增加一个只读节点，勾选服务协议，单击**去支付**并完成支付。
 
 ## 删除只读节点 {#section_fkk_13d_lfb .section}
 
@@ -45,17 +46,17 @@
 3.  进入增删节点向导页面。您可以按照如下两种方式操作：
     -   找到目标集群，在**操作**列单击**增删节点**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156351984034661_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156403335634661_zh-CN.png)
 
     -   找到目标集群，单击集群ID，在基本信息页面下方单击**增删节点**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156351984013618_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156403335613618_zh-CN.png)
 
 4.  勾选**删除节点**并单击**确定**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156351984052249_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/156403335752249_zh-CN.png)
 
-5.  单击想要删除的节点后面的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15635198413601_zh-CN.png)，并在弹出对话框中单击**确定**。
+5.  单击想要删除的节点后面的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13773/15640333573601_zh-CN.png)，并在弹出对话框中单击**确定**。
 
     **说明：** 集群中必须保留至少一个只读节点，以保障集群的高可用。
 
