--- a/cn.zh-CN/产品定价/变更配置费用说明.md
+++ b/cn.zh-CN/产品定价/变更配置费用说明.md
@@ -1,6 +1,8 @@
 # 变更配置费用说明 {#concept_269560 .concept}
 
-## 按量付费集群变配费用 {#section_e1p_s4y_uqb .section}
+本文介绍按小时付费集群和包年包月集群变更配置的费用说明。
+
+## 按小时付费集群变配费用 {#section_e1p_s4y_uqb .section}
 
 按量付费集群是每小时收费，变更配置后按照新的售价每小时收费。
 
@@ -21,4 +23,8 @@
 
 -   升配的订单享受了折扣：例如购买1年，由于现在1年是享受85折的，若原价是1000元，实际只需支付850元即可。在降配计算退款的时候会基于850元计算。
 -   升配的订单使用了代金券：由于降配的时候老配置的退款金额时只退现金，但是升级的时候计算老配置的价格是老配置的单价（包括代金券）。
+
+## 相关文档 {#section_pda_8zp_zmp .section}
+
+[变更配置](../../../../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md#)
 
