--- a/cn.zh-CN/产品定价/规格与定价.md
+++ b/cn.zh-CN/产品定价/规格与定价.md
@@ -20,8 +20,11 @@ POLARDB支持以下两种付费方式：
 |收费项|说明|
 |---|--|
 |[计算集群（主节点和只读节点）](#)|**包年包月**或**按小时付费**。|
-|[存储空间](#)|**按小时付费**。|
-|[SQL洞察](#)|开启后**按小时付费**。功能介绍请参见[SQL洞察简介](../cn.zh-CN/POLARDB for MySQL用户指南/SQL洞察.md#)。|
+|[存储空间](#)| -   **按小时付费**。
+-   预付费购买**存储包**。详情请参见[使用存储包](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/使用存储包.md#)。
+
+ |
+|[SQL洞察](#)|开启后**按小时付费**。详情请参见[SQL洞察简介](../cn.zh-CN/POLARDB for MySQL用户指南/SQL洞察.md#)。|
 |数据备份|暂不收费。|
 
 ## 售价 {#section_f4v_rpg_tdb .section}
@@ -260,6 +263,8 @@ POLARDB支持以下两种付费方式：
 
     -   存储空间容量按小时扣费，不支持包年包月。
     -   每个集群规格都有对应的[最大存储容量](cn.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
+    当您的数据量较大时，推荐您购买存储包，可由规定的地域内的所有集群共享使用，详情请参见[使用存储包](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/使用存储包.md#)。
+
 -   **SQL洞察价格**
 
     SQL洞察按照审计日志存储的容量收取费用。
