--- a/cn.zh-CN/POLARDB for Oracle开发指南/分区表使用/选择分区类型.md
+++ b/cn.zh-CN/POLARDB for Oracle开发指南/分区表使用/选择分区类型.md
@@ -1,23 +1,25 @@
 # 选择分区类型 {#concept_221600 .concept}
 
-当我们创建了一个分区表，我们可以指定LIST或RANGE分区规则。分区规则提供的一组约束条件用于定义存储在各个分区中的数据。当把新的记录添加到分区中时，服务器就会使用分区规则决定各分区所应该包含的记录。
+本文为您介绍如何选择分区类型。
 
-POLARDB for Oracle也可以使用分区规则来启用分区剪枝，在回应用户查询的时候提高性能。 当给表选择分区类型和分区键时， 我们应该考虑如何查询存储在表内的数据，并在分区规则中包括经常被查询的列。
+当您创建了一个分区表，可以指定LIST或RANGE分区规则。分区规则提供的一组约束条件用于定义存储在各个分区中的数据。当您将新的记录添加到分区中时，服务器就会使用分区规则决定各分区所应该包含的记录。
+
+POLARDB for Oracle也可以使用分区规则来启用分区剪枝，在回应用户查询的时候提高性能。 当您给表选择分区类型和分区键时，应该考虑如何查询存储在表内的数据，并在分区规则中包括经常被查询的列。
 
 ## 分区类型 {#section_j23_to2_ddx .section}
 
--   **列表分区** 
+-   列表分区
 
-    当我们创建一个列表分区表时，我们可以指定一个分区键列。 当添加一条记录到表中时，服务器就会把在分区规则中指定的键值与相应带有记录的列相比较。 如果列值与分区规则中的值匹配，那么记录将存储在规则中命名的分区里。
+    当您创建一个列表分区表时，可以指定一个分区键列。 当您添加一条记录到表中时，服务器就会把在分区规则中指定的键值与相应带有记录的列相比较。 如果列值与分区规则中的值匹配，那么记录将存储在规则中命名的分区里。
 
--   **范围分区** 
+-   范围分区
 
-    当我们创建一个范围分区表时，我们可以指定一个或多个分区键列。 当添加一条新记录到表中时， 服务器就会将分区键值（或键）与表项目中相应的列做比较。如果列值满足分区规则中指定的条件，那么记录将存储在规则中命名的分区里。
+    当您创建一个范围分区表时，可以指定一个或多个分区键列。 当您添加一条新记录到表中时， 服务器就会将分区键值（或键）与表项目中相应的列做比较。如果列值满足分区规则中指定的条件，那么记录将存储在规则中命名的分区里。
 
--   **子分区** 
+-   子分区
 
-    子分区是把分区表划分为更小的子集，这些子集也许会，也许不会存储在相同的服务器上。 通常表会被不同的列集进行子分区的划分， 且也许是不同的子分区类型，而不是母分区类型。如果对一个分区进行了子分区的划分， 那么每个分区都至少有一个子分区。
+    子分区是把分区表划分为更小的子集，这些子集可能会存储在相同的服务器上，也可能不会。 通常表会被不同的列集进行子分区的划分， 且可能是不同的子分区类型，而不是母分区类型。如果对一个分区进行了子分区的划分， 那么每个分区都至少有一个子分区。
 
-    如果对一个表进行了子分区的划分， 那么在任何分区表中都不会存储数据。数据会存储于相应的子分区中。
+    如果对一个表进行了子分区的划分， 那么在任何分区表中都不会存储数据，数据会存储于相应的子分区中。
 
 
