--- a/cn.zh-CN/POLARDB for Oracle开发指南/分区表使用/使用分区剪枝.md
+++ b/cn.zh-CN/POLARDB for Oracle开发指南/分区表使用/使用分区剪枝.md
@@ -1,29 +1,31 @@
 # 使用分区剪枝 {#concept_221606 .concept}
 
-POLARDB for Oracle查询计划器使用分区剪枝计算出一个有效计划来定位一条与在SELECT 语句的WHERE子句中指定的条件相匹配的记录。分区剪枝机制使用下面两个优化技巧。
+POLARDB for Oracle查询计划器使用分区剪枝计算出一个有效计划来定位一条与在SELECT 语句的WHERE子句中指定的条件相匹配的记录。
 
--   约束排除
+分区剪枝机制使用下面两个优化技巧：
+
+-   排除约束
 -   快速剪枝
 
-分区剪枝技巧仅对那些我们要搜索的值可能所属的分区限制了数据的搜索。上述这两种剪枝技巧都能从查询执行计划中删除分区，从而提高性能。
+分区剪枝技巧仅对那些您要搜索的值可能所属的分区限制了数据的搜索。上述这两种剪枝技巧都能从查询执行计划中删除分区，从而提高性能。
 
-快速剪枝与排除约束这两种技巧的区别在于，快速剪枝技巧了解Oracle分区表中各分区之间的关系，而排除约束技巧却不具备这个特性。 例如，当查询在列表分区表中搜索一个具体的值时， 快速剪枝技巧能推理出只有一个具体的分区才会有这个值， 但排除约束技巧则必须要检查定义给每个分区的约束。快速剪枝技巧在计划过程中出现的较早，从而减少计划器必须考虑的分区数量，但排除约束则在计划过程中出现的较晚。
+快速剪枝与排除约束这两种技巧的区别在于，快速剪枝技巧了解Oracle分区表中各分区之间的关系，而排除约束技巧却不具备这个特性。例如，当查询在列表分区表中搜索一个具体的值时，快速剪枝技巧能推理出只有一个具体的分区才会有这个值，但排除约束技巧则必须要检查定义给每个分区的约束。快速剪枝技巧在计划过程中出现的较早，从而减少计划器必须考虑的分区数量，但排除约束则在计划过程中出现的较晚。
 
 ## 使用排除约束 {#section_bbe_5i8_8i9 .section}
 
-参数constraint\_exclusion用于控制排除约束。它可能有on、 off 或partition这三种值的其中一个。要启用排除约束，就必须将参数constraint\_exclusion设为partition或on。 通过缺省，将参数设为partition。
+参数constraint\_exclusion用于控制排除约束。它有on、off 或partition这三种值的其中一个。要启用排除约束，就必须将参数constraint\_exclusion设为partition或on。通过缺省设置，将参数设为partition。
 
 **说明：** 更多关于排除约束的信息请参考[Partitioning](https://www.enterprisedb.com/docs/en/9.3/pg/ddl-partitioning.html)。
 
-当启用了排除约束，服务器就会检查定义给每个分区的约束来决定分区是否能满足查询。
+当您启用了排除约束，服务器就会检查定义给每个分区的约束来决定分区是否能满足查询。
 
-当我们执行一条不包含WHERE子句的SELECT语句时，查询计划器必须推荐一个用于搜索整个表的执行计划。当我们执行一条包含WHERE子句的SELECT语句时， 查询计划器就会决定要存储记录的分区， 并发送查询碎片给这个分区， 然后从执行计划中剪去不能包含记录的分区。如果我们不使用分区表，那么禁用排除约束可能会提高性能。
+当您执行一条不包含WHERE子句的SELECT语句时，查询计划器必须推荐一个用于搜索整个表的执行计划。当您执行一条包含WHERE子句的SELECT语句时，查询计划器就会决定要存储记录的分区，并发送查询碎片给这个分区，然后从执行计划中剪去不能包含记录的分区。如果您不使用分区表，那么禁用排除约束可能会提高性能。
 
-## 快速剪枝 {#section_psj_rx0_6je .section}
+## 使用快速剪枝 {#section_psj_rx0_6je .section}
 
-和排除约束技巧一样，快速剪枝的技巧只能对包括WHERE（或连接）子句的查询，且只有当WHERE子句中的限定符与某种格式匹配时进行优化。 这两种情况下， 查询计划器将会避免搜索那些可能不包含所要查询的数据分区中的数据。
+和排除约束技巧一样，快速剪枝的技巧只能对包括WHERE（或连接）子句的查询，且只有当WHERE子句中的限定符与某种格式匹配时进行优化。这两种情况下，查询计划器将会避免搜索那些可能不包含所要查询的数据分区中的数据。
 
-快速剪枝技巧由布林配置参数edb partition pruning控制。 如果布林配置参数edb partition pruning为ON，那么POLARDB for Oracle将会快速剪去某些特定的查询。如果布林配置参数edb partition pruning为OFF，那么POLARDB for Oracle就不会启用快速剪枝技巧。
+快速剪枝技巧由布林配置参数edb partition pruning控制。如果布林配置参数edb partition pruning为ON，那么POLARDB for Oracle将会快速剪去某些特定的查询。如果布林配置参数edb partition pruning为OFF，那么POLARDB for Oracle就不会启用快速剪枝技巧。
 
 需要注意的是：快速剪枝技巧不能优化对子分区表的查询，或分区于多个列上的范围分区表的查询。
 
@@ -36,8 +38,7 @@ CREATE TABLE sales_hist(..., country text, ...)
     PARTITION europe VALUES('BE', 'NL', 'FR'), 
     PARTITION asia VALUES('JP', 'PK', 'CN'), 
     PARTITION others VALUES(DEFAULT)
-)
-				
+)                
 ```
 
 快速剪枝技巧能推理出WHERE子句的信息，例如：
