--- a/cn.zh-CN/POLARDB for Oracle开发指南/分区表使用/分区剪枝示例.md
+++ b/cn.zh-CN/POLARDB for Oracle开发指南/分区表使用/分区剪枝示例.md
@@ -1,8 +1,10 @@
 # 分区剪枝示例 {#concept_221636 .concept}
 
+本文为您介绍分区剪枝示例，以便您掌握使用分区剪枝。
+
 ## 示例 {#section_d6h_46u_bw9 .section}
 
-EXPLAIN语句用于显示语句的执行计划。我们可以使用EXPLAIN语句来确认POLARDB for Oracle是否是从查询的执行计划中剪去分区的。 要演示分区剪枝的效率，首先要创建一个简单表：
+EXPLAIN语句用于显示语句的执行计划。您可以使用EXPLAIN语句来确认POLARDB for Oracle是否从查询的执行计划中剪去分区的。 以下为您演示分区剪枝的效率，首先要创建一个简单表：
 
 ``` {#codeblock_hre_ub0_bc0}
 CREATE TABLE sales
@@ -42,7 +44,7 @@ edb=# EXPLAIN (COSTS OFF) SELECT * FROM sales WHERE country = 'INDIA';
 (5 rows)
 ```
 
-如果我们执行一个查询来搜索一条与没有包括在分区键中的值匹配的记录：
+如果您要执行一个查询来搜索一条与没有包括在分区键中的值匹配的记录：
 
 ``` {#codeblock_5ak_lga_rsd}
 EXPLAIN (COSTS OFF) SELECT * FROM sales WHERE dept_no = '30';  
@@ -100,7 +102,7 @@ PARTITION BY RANGE(date) SUBPARTITION BY LIST (country)
 );
 ```
 
-当我们查询这个表时，查询计划器会从搜索路径中剪去任何可能不包含我们想要的结果集的分区或子分区。
+当您查询这个表时，查询计划器会从搜索路径中剪去任何可能不包含您想要的结果集的分区或子分区。
 
 ``` {#codeblock_ecm_324_4th}
 edb=# EXPLAIN (COSTS OFF) SELECT * FROM sales WHERE country = 'US' AND date = 'Dec 12, 2012';
