--- a/cn.zh-CN/POLARDB for MySQL用户指南/账号管理/创建和使用子账号.md
+++ b/cn.zh-CN/POLARDB for MySQL用户指南/账号管理/创建和使用子账号.md
@@ -4,50 +4,66 @@
 
 如果需要让其他人使用您账号下的资源，请创建子账号。
 
-## 创建子账号 {#section_mb2_54q_tdb .section}
+## 登录RAM控制台 {#section_m66_z7t_pfi .section}
 
-您可以使用阿里云账号或有RAM权限的子账号来创建子账号。具体操作如下：
+您可以使用阿里云账号或有RAM权限的子账号来创建子账号，首先需要登陆RAM控制台。具体操作如下：
 
-1.  登录账号。
-    -   如果使用阿里云账号，请[点此登录](https://account.aliyun.com/login/login.htm)。
+-   如果使用阿里云账号，请[点此登录](https://account.aliyun.com/login/login.htm)。
 
-    -   如果使用子账号，请[点此登录](https://signin.aliyun.com/login.htm)。
+-   如果使用子账号，请[点此登录](https://signin.aliyun.com/login.htm)。
 
 **说明：** 子账号登录的格式为`子账号名@公司别名`。
 
-2.  进入访问控制RAM控制台（[https://ram.console.aliyun.com](https://ram.console.aliyun.com/)）。
-3.  在左侧导航栏选择**用户管理**，然后单击右上角的**新建用户**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3025/15574753582094_zh-CN.png)
+## 创建RAM用户 {#section_lfn_4vi_ov8 .section}
 
-4.  填写子账号信息，然后单击**确定**，即可创建子账号。
+1.  在左侧导航栏的**人员管理**菜单下，单击**用户**。
+2.  单击**新建用户**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3025/15574753582095_zh-CN.png)
+    **说明：** 单击**添加用户**，可一次性创建多个RAM用户。
 
+3.  输入**登录名称**和**显示名称**。
+4.  在**访问方式**区域下，选择**控制台密码登录**或**编程访问**。
 
-## 设置登录密码 {#section_sx1_y4q_tdb .section}
+    **说明：** 为了保障账号安全，建议仅为RAM用户选择一种登录方式，避免RAM用户离开组织后仍可以通过访问密钥访问阿里云资源。
 
-1.  使用阿里云账号或有RAM权限的子账号登录[RAM控制台](https://ram.console.aliyun.com/)。
-2.  在左侧导航栏中选择**用户管理**。
-3.  在用户清单中找到需要设置登录密码的用户（可使用用户名进行模糊查询），单击其用户名或**操作**列下的**管理**。
-4.  在用户详情页面，单击**启用控制台登录**。
+5.  单击**确认**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3025/15574753582096_zh-CN.png)
+## 控制台密码登录 {#section_fla_l2i_bzo .section}
 
-5.  填写该子账号用于登录的密码。
+1.  **控制台密码**选择**自动生成默认密码**或**自定义登录密码**。
+2.  **控制台密码**选择**自动生成默认密码**。
+3.  **控制台密码**选择**自定义登录密码**：输入自定义密码。
+4.  **要求重置密码**选择**用户在下次登录时必须重置密码**或**无需重置**。
+5.  **要求重置密码**选择**用户在下次登录时必须重置密码**。
+6.  **要求重置密码**选择**无需重置**。
+7.  **多因素认证**选择**要求开启MFA认证**或**不要求**。
+8.  **多因素认证**选择**要求开启MFA认证**。
+9.  **多因素认证**选择**不要求**。
 
-## 授权子账号 {#section_wb2_54q_tdb .section}
+## 在授权页面下为RAM用户授权 {#section_gwi_ld8_aqh .section}
 
-子账号默认是没有任何访问权限的。如果没有被授权，即使能登入控制台，仍然无权做任何操作。授权操作如下：
+1.  在左侧导航栏的**权限管理**菜单下，单击**授权**。
+2.  单击**新增授权**。
+3.  在**被授权主体**区域下，输入RAM用户名称后，单击需要授权的RAM用户。
+4.  在左侧**权限策略名称**列表下，单击需要授予RAM用户的权限策略。
 
-1.  使用阿里云账号或有RAM权限的子账号登录[RAM控制台](https://ram.console.aliyun.com/)。
-2.  在左侧导航栏中选择**用户管理**。
-3.  在用户清单中找到需要授权的用户（可使用用户名进行模糊查询），单击其用户名或**操作**列下的**授权**。
-4.  在**编辑个人授权策略**页面，在左侧**可选授权策略名称**中找到AliyunVPCFullAccess和AliyunPolardbFullAccess（可使用关键字查询）策略，分别选中并单击右向箭头，以添加到右侧**已选授权策略名称**。
+    **说明：** 在右侧区域框，选择某条策略并单击**×**，可撤销该策略。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3025/15574753596629_zh-CN.png)
+5.  单击**确定**。
+6.  单击**完成**。
 
-5.  单击**确定**，完成授权。
+## 在用户页面下为RAM用户授权 {#section_23r_hc3_d8r .section}
+
+1.  在左侧导航栏的**人员管理**菜单下，单击**用户**。
+2.  在**用户登录名称/显示名称**列表下，找到目标RAM用户。
+3.  单击**添加权限**，被授权主体会自动填入。
+4.  在左侧**权限策略名称**列表下，单击需要授予RAM用户的权限策略。
+
+    **说明：** 在右侧区域框，选择某条策略并单击**×**，可撤销该策略。
+
+5.  单击**确定**。
+6.  单击**完成**。
 
 ## 登录子账号 {#section_zb2_54q_tdb .section}
 
@@ -61,7 +77,7 @@
 
 -   专用登录地址：如果您可以登录[RAM控制台](https://ram.console.aliyun.com)，可以在RAM控制台查看到您公司的子账号登录地址。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3025/15574753596630_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3025/15645636006630_zh-CN.png)
 
     如果通过此地址登录，系统将自动为您填写公司别名，您只需输入子账号名。
 
