--- a/cn.zh-CN/POLARDB for Oracle开发指南/基本操作/创建与使用序列.md
+++ b/cn.zh-CN/POLARDB for Oracle开发指南/基本操作/创建与使用序列.md
@@ -16,9 +16,9 @@ CREATE SEQUENCE name [ INCREMENT BY increment ]
 |参数名称|描述|
 |----|--|
 |name|创建的序列的名称。|
-|increment|我们可以使用可选的 `INCREMENT BY increment`子句把当前序列的值加上指定增量值，这样可以产生一个新的数值。一个正数增量将会产生一个升序序列，一个负数增量产生一个降序序列值。这个参数的缺省值是1。|
-|NOMINVALUE | MINVALUE minvalue|可选子句`MINVALUE minvalue`决定一个序列可以产生的最小值。如果没有使用这个子句，将使用缺省值。1和-263-1分别是升序和降序序列的缺省值。需要注意的是可以使用关键字`NOMINVALUE`把序列可产生的最小值设定回缺省值。|
-|NOMAXVALUE | MAXVALUE maxvalue|可选子句`MAXVALUE maxvalue`决定一个序列可以产生的最大值。如果没有使用这个子句，将使用缺省值。263-1和1分别是升序和降序序列的缺省值。需要注意的是可以使用关键字`NOMAXVALUE`把序列可产生的最大值设定回缺省值。|
+|increment|您可以使用可选的 `INCREMENT BY increment`子句把当前序列的值加上指定增量值，这样可以产生一个新的数值。一个正数增量将会产生一个升序序列，一个负数增量产生一个降序序列值。这个参数的缺省值是1。|
+|NOMINVALUE | MINVALUE minvalue|可选子句`MINVALUE minvalue`决定一个序列可以产生的最小值。如果没有使用这个子句，将使用缺省值。1和-2 63 -1分别是升序和降序序列的缺省值。需要注意的是可以使用关键字`NOMINVALUE`把序列可产生的最小值设定回缺省值。|
+|NOMAXVALUE | MAXVALUE maxvalue|可选子句`MAXVALUE maxvalue`决定一个序列可以产生的最大值。如果没有使用这个子句，将使用缺省值。2 63 -1和1分别是升序和降序序列的缺省值。需要注意的是可以使用关键字`NOMAXVALUE`把序列可产生的最大值设定回缺省值。|
 |start|可选子句`START WITH start`允许序列从任意一个位置开始。对于升序序列来说，缺省值是`minvalue`，对于降序序列来说缺省值是`maxvalue`。|
 |cache|可选子句`CACHE cache`指定了为快速访问，有多少序列数预先分配，并存储在内存中。这个参数的最小值是1（每次只产生一个值，例如, NOCHACHE）, 并且这也是缺省值。|
 |CYCLE|当升序序列和降序序列达到各自的最大值和最小值，CYCLE选项允许序列返回到初始位置。如果达到了限制值，那么下一次产生的数值就是各自的最小值和最大值。如果没有使用CYCLE\(这是缺省设置\),当序列达到最大值的时候，任何对NEXTVAL的调用将返回一个错误。注意关键字NO CYCLE可以用来保持缺省的动作。但是，这个关键字与Oracle不兼容。|
@@ -27,11 +27,11 @@ CREATE SEQUENCE name [ INCREMENT BY increment ]
 
 CREATE SEQUENCE命令用于创建一个新的序列数字生成器。这个操作涉及到创建和初始化一个名称为参数name所指定，带有单条记录的表。运行这条命令的用户是新创建序列生成器的所有者。
 
-如果指定了模式名称，那么序列在指定模式中创建，否则就在当前模式中创建。在同一模式中，序列的名称不能与其他的序列，表，索引或者视图相同。
+如果指定了模式名称，那么序列在指定模式中创建，否则就在当前模式中创建。在同一模式中，序列的名称不能与其他的序列、表、索引或者视图相同。
 
 **说明：** 
 
-序列基于大整数算法，所以数值不能超过8字节长度的整数\(从-9223372036854775808 到9223372036854775807\)。在一些版本比较老的平台，可能没有编译器支持8字节长度的整数，在这种情况下，序列只能使用规则整数算法\(范围是从-2147483648 to +2147483647\)。
+序列基于大整数算法，所以数值不能超过8字节长度的整数\(从-9223372036854775808 到9223372036854775807\)。在一些版本比较老的平台，可能没有编译器支持8字节长度的整数，在这种情况下，序列只能使用规则整数算法（范围是从-2147483648 to +2147483647）。
 
 当多个会话并发访问一个缓存设置大于1的序列对象的时候，可能会取得不希望的结果。这是因为每一个会话在访问序列对象的过程中都要分配和缓存连续的序列值，因此都要增加序列对象的最新值。然后，会话中接下来cache-1次NEXTVAL函数的调用仅仅返回预先分配的值，而没有实际与序列对象联系。这样，当会话结束的时候，任何已分配但是没有在会话中使用的值将会丢失。这样就会在序列中产生一个漏洞。
 
@@ -57,7 +57,7 @@ SELECT serial.NEXTVAL FROM DUAL;
 
      101
 
-(1 row)			
+(1 row)            
 ```
 
 创建一个名称为supplier\_seq的序列，使用NOCACHE选项：
@@ -78,6 +78,6 @@ SELECT supplier_seq.NEXTVAL FROM DUAL;
  nextval
 ---------
        1
-(1 row)		
+(1 row)        
 ```
 
