--- a/cn.zh-CN/POLARDB for Oracle开发指南/基本操作/创建表.md
+++ b/cn.zh-CN/POLARDB for Oracle开发指南/基本操作/创建表.md
@@ -48,13 +48,13 @@ table constraint 是下列选项之一：
 
 |参数名称|描述|
 |----|--|
-|GLOBAL TEMPORARY|如果指定了这个参数，那么会创建一张临时表。在会话结束时会自动删除临时表，我们也可以在当前事务结束时进行这个操作（详细信息参照下面提到的参数ON COMMIT）。如果相同名称的永久表存在，那么当临时表存在的时候，永久有效的表对于当前会话来说是不可见的，除非使用模式限定的名称来引用这些表。除此之外，临时表在创建它的会话范围之外也是不可见的（全局临时表在这个方面与Oracle不兼容）。任何在临时表上创建的索引也是临时存在的。|
+|GLOBAL TEMPORARY|如果指定了这个参数，那么会创建一张临时表。在会话结束时会自动删除临时表，您也可以在当前事务结束时进行这个操作（详细信息参照下面提到的参数ON COMMIT）。如果相同名称的永久表存在，那么当临时表存在的时候，永久有效的表对于当前会话来说是不可见的，除非使用模式限定的名称来引用这些表。除此之外，临时表在创建它的会话范围之外也是不可见的（全局临时表在这个方面与Oracle不兼容）。任何在临时表上创建的索引也是临时存在的。|
 |table name|新创建表的名称。 **说明：** 可以采用模式限定的方式引用。
 
  |
 |column name|新表中要创建列的名称。|
 |data type|列的数据类型。数据类型可能包括数组定义。|
-|DEFAULT default\_expr|DEFAULT子句为出现在列定义中的列分配一个缺省值。这个值可以是任意表达式（但不允许使用子查询和当前表中对其他列的引用）。缺省表达式的数据类型必须匹配列的数据类型。 当在插入操作中没有为列指定值的时候，我们可以使用缺省表达式。如果没有为列指定缺省值。那么缺省值为空。
+|DEFAULT default\_expr|DEFAULT子句为出现在列定义中的列分配一个缺省值。这个值可以是任意表达式（但不允许使用子查询和当前表中对其他列的引用）。缺省表达式的数据类型必须匹配列的数据类型。 当在插入操作中没有为列指定值的时候，您可以使用缺省表达式。如果没有为列指定缺省值。那么缺省值为空。
 
  |
 |CONSTRAINT constraint\_name|为列或者表约束所指定的名称（这个名称可选）。如果没有指定的话，那么系统会为这个约束自动产生一个名称。|
@@ -84,9 +84,9 @@ table constraint 是下列选项之一：
 
  |
 |FOREIGN KEY \( column \[, ...\] \) REFERENCES reftable \[ \( refcolumn \[, ...\] \) \] \[ ON DELETE action \] - 表级约束|
-|DEFERRABLE NOT|用于控制约束是否可以延迟。每一条命令执行后，非延迟的约束就会立即进行检查。可延迟的约束检查只有在事务结束后才进行\(使用SET CONSTRAINTS命令实现此操作\)。NO DEFERRABLE是缺省选项。当前只有外键约束使用这个子句。其他所有的约束类型是不可延迟的。|
+|DEFERRABLE NOT|用于控制约束是否可以延迟。每一条命令执行后，非延迟的约束就会立即进行检查。可延迟的约束检查只有在事务结束后才进行（使用SET CONSTRAINTS命令实现此操作）。NO DEFERRABLE是缺省选项。当前只有外键约束使用这个子句。其他所有的约束类型是不可延迟的。|
 |DEFERRABLE|
-|INITIALLY IMMEDIATE|如果约束是可延迟的，这个子句指定了进行约束检查的缺省时间值。如果约束是INITIALLY IMMEDIATE，那么在每条语句执行后，就会进行约束检查。这是缺省状况。如果约束是INITIALLY DEFERRED，那么只有在事务结束后才能进行约束检查。我们可以使用SET CONSTRAINT命令来修改约束检查时间。|
+|INITIALLY IMMEDIATE|如果约束是可延迟的，这个子句指定了进行约束检查的缺省时间值。如果约束是INITIALLY IMMEDIATE，那么在每条语句执行后，就会进行约束检查。这是缺省状况。如果约束是INITIALLY DEFERRED，那么只有在事务结束后才能进行约束检查。您可以使用SET CONSTRAINT命令来修改约束检查时间。|
 |INITIALLY DEFERRED|
 |ON COMMIT|在事务块结束时处理临时表的操作可以由ON COMMIT来控制。这里有两个选项： -   PRESERVE ROWS：在事务结束时不进行特定的操作。这是缺省系统行为（需要注意的它与Oracle不兼容。Oracle在缺省状态下是DELETE ROWS）。
 -   DELETE ROWS：在每一个事务结束的时候，删除临时表中的所有记录。实质上，就是在每一次提交后，自动执行一个TRUNCATE操作。
@@ -137,7 +137,7 @@ CREATE TABLE emp (
 );
 ```
 
-为表dept定义一个唯一性表级约束。我们可以在表中多列上定义唯一性表级约束。
+为表dept定义一个唯一性表级约束。您可以在表中多列上定义唯一性表级约束。
 
 ``` {#codeblock_typ_tpz_hp9}
 CREATE TABLE dept (
@@ -180,7 +180,7 @@ CREATE TABLE emp (
 );            
 ```
 
-为表jobhist定义一个主键表级约束。我们可以在表中多列上定义主键表级约束。
+为表jobhist定义一个主键表级约束。您可以在表中多列上定义主键表级约束。
 
 ``` {#codeblock_mz3_16j_0i6}
 CREATE TABLE jobhist (
