--- a/cn.zh-CN/POLARDB for Oracle开发指南/基本操作/删除表.md
+++ b/cn.zh-CN/POLARDB for Oracle开发指南/基本操作/删除表.md
@@ -36,7 +36,7 @@ DROP TABLE命令同时删除表中的索引，规则，触发器和约束。
 DROP TABLE emp;
 ```
 
-执行DROP TABLE命令会产生不同的结果，这主要取决于表是否有任何依赖关系。我们可以通过指定删除行为来控制DROP TABLE命令产生的结果。例如，如果我们创建了两个表，表orders 和表items，其中表items依赖于表orders：
+执行DROP TABLE命令会产生不同的结果，这主要取决于表是否有任何依赖关系。您可以通过指定删除行为来控制DROP TABLE命令产生的结果。例如，如果您创建了两个表，表orders 和表items，其中表items依赖于表orders：
 
 ``` {#codeblock_wqn_bsj_r7r}
 CREATE TABLE orders
@@ -45,9 +45,9 @@ CREATE TABLE items
   (order_id REFERENCES orders, quantity int, …);            
 ```
 
-当删除表orders时，POLARDB for Oracle将进行以下操作的其中一种，这主要取决于我们所指定的删除行为：
+当删除表orders时，POLARDB for Oracle将进行以下操作的其中一种，这主要取决于您所指定的删除行为：
 
--   如果我们指定了`DROP TABLE orders RESTRICT`，那么POLARDB for Oracle就会报错。
--   如果我们指定了`DROP TABLE orders CASCADE`，那么POLARDB for Oracle将会删除表orders及表items。
--   如果我们指定了`DROP TABLE orders CASCADE CONSTRAINTS`，那么POLARDB for Oracle 将会删除表orders，且会从表items中删除指定的外键，但不会删除表items。
+-   如果您指定了`DROP TABLE orders RESTRICT`，那么POLARDB for Oracle就会报错。
+-   如果您指定了`DROP TABLE orders CASCADE`，那么POLARDB for Oracle将会删除表orders及表items。
+-   如果您指定了`DROP TABLE orders CASCADE CONSTRAINTS`，那么POLARDB for Oracle 将会删除表orders，且会从表items中删除指定的外键，但不会删除表items。
 
