--- a/cn.zh-CN/POLARDB for Oracle开发指南/基本操作/创建物化视图.md
+++ b/cn.zh-CN/POLARDB for Oracle开发指南/基本操作/创建物化视图.md
@@ -38,13 +38,13 @@ REFRESH [COMPLETE] [ON DEMAND]
 
 ## 描述 {#section_zi3_sew_wrf .section}
 
-create materialized view定义了一个查询视图。这个查询视图不会因为每次在查询中被引用而更新。 通过缺省，在创建视图时，这个视图会自动填充信息。我们可以包括关键字build deferred来延迟视图的填充。
+create materialized view定义了一个查询视图。这个查询视图不会因为每次在查询中被引用而更新。通过缺省，在创建视图时，这个视图会自动填充信息。您可以包括关键字build deferred来延迟视图的填充。
 
-物化视图可以采用模式限定的方式引用。 如果在调用create materialized view命令时，我们指定了一个模式名，那么这个视图就会创建于指定的模式中。所创建的视图名必须区别于相同模式下的其它任何视图、表、序列或索引。
+物化视图可以采用模式限定的方式引用。 如果在调用create materialized view命令时，您指定了一个模式名，那么这个视图就会创建于指定的模式中。所创建的视图名必须区别于相同模式下的其它任何视图、表、序列或索引。
 
 **说明：** 
 
--   物化视图为只读模式，也就是说服务器不允许对物化视图进行insert、 update或delete操作。
+-   物化视图为只读模式，也就是说服务器不允许对物化视图进行insert、update或delete操作。
 -   能否访问视图中引用的表，是由视图的拥有者来决定的。视图用户必须有授权才能够调用视图所使用的全部函数。
 -   更多关于Postgres refresh materialized view命令的信息，请参见PostgreSQL 核心文件，可在下列网址获得：[http://www.enterprisedb.com/documentation/english](http://www.enterprisedb.com/documentation/english)
 
