--- a/cn.zh-CN/POLARDB for Oracle开发指南/基本操作/创建索引.md
+++ b/cn.zh-CN/POLARDB for Oracle开发指南/基本操作/创建索引.md
@@ -25,21 +25,21 @@ CREATE [ UNIQUE ] INDEX name ON table
 
 create index命令用于在指定的表上创建一个索引。索引主要是用来提高数据库的性能。
 
-索引的关键字字段可以是列名，也可以是写在括号中的表达式。我们可以指定多个字段来创建多列索引。
+索引的关键字字段可以是列名，也可以是写在括号中的表达式。您可以指定多个字段来创建多列索引。
 
-索引字段可以是由表记录中一列或者多列表字段值计算出来的一个表达式。我们可以使用这种特性来快速访问基于基础数据转换后的数据。例如，由UPPER\(col\)计算得出的索引值允许子句`WHERE UPPER(col) = 'JIM'`使用索引。
+索引字段可以是由表记录中一列或者多列表字段值计算出来的一个表达式。您可以使用这种特性来快速访问基于基础数据转换后的数据。例如，由UPPER\(col\)计算得出的索引值允许子句`WHERE UPPER(col) = 'JIM'`使用索引。
 
 POLARDB for Oracle提供B-树结构的索引。B-树索引是Lehman-Yao高并发B-树算法的应用实现。
 
 在缺省情况下，不能为IS NULL子句使用索引。
 
-在索引定义中用到的所有函数和操作符必须是不可改变的，也就是说，它们的结果只取决于它们的参数而与外面的影响无关（例如 另外一张表的内容或者当前系统时间的改变）。这个限制确保索引的行为是明确界定的，如果在索引中使用用户定义的函数，必须记住在创建它的时候把函数标识为不可改变。
+在索引定义中用到的所有函数和操作符必须是不可改变的，也就是说，它们的结果只取决于它们的参数而与外面的影响无关（例如，另外一张表的内容或者当前系统时间的改变）。这个限制确保索引的行为是明确界定的，如果在索引中使用用户定义的函数，必须记住在创建它的时候把函数标识为不可改变。
 
-如果我们要在分区表中创建索引，那么create index命令则会基于引用的表的基础上增殖索引：
+如果您要在分区表中创建索引，那么create index命令则会基于引用的表的基础上增殖索引：
 
--   如果我们在CREATE INDEX命令中指定了分区根的名称，那么同时也会创建表的任何分区或子分区索引。
--   如果我们在create index命令中指定了分区备份表的名称，那么同时也会创建这个分区的任何子分区索引。
--   如果我们在create index命令中指定了子分区备份表的名称，那么只会创建这个子分区表的索引。
+-   如果您在CREATE INDEX命令中指定了分区根的名称，那么同时也会创建表的任何分区或子分区索引。
+-   如果您在create index命令中指定了分区备份表的名称，那么同时也会创建这个分区的任何子分区索引。
+-   如果您在create index命令中指定了子分区备份表的名称，那么只会创建这个子分区表的索引。
 
 **说明：** 最多可为多列索引指定32个字段。
 
