--- a/cn.zh-CN/POLARDB for Oracle开发指南/基本操作/创建与使用同义词.md
+++ b/cn.zh-CN/POLARDB for Oracle开发指南/基本操作/创建与使用同义词.md
@@ -1,5 +1,7 @@
 # 创建与使用同义词 {#concept_189528 .concept}
 
+同义词是一个标识符，用于在一条SQL语句中引用另一个数据库对象。
+
 ## 语法 {#section_xh1_w4t_a2s .section}
 
 通过使用CREATE SYNONYM命令来创建同义词。语法如下：
@@ -42,19 +44,19 @@ POLARDB for Oracle支持下列内容的同义词：
 -   类型
 -   其它同义词
 
-在创建同义词时，不要求必须有引用的模式或引用的对象。因为一个同义词可以引用一个不存在的对象或模式。如果删除同义词引用的对象或模式，该同义词会因此而失效。我们必须要明确删除要移除的同义词。
+在创建同义词时，不要求必须有引用的模式或引用的对象。因为一个同义词可以引用一个不存在的对象或模式。如果删除同义词引用的对象或模式，该同义词会因此而失效。您必须要明确删除要移除的同义词。
 
-当同义词和任何其他的模式对象在一起时，POLARDB for Oracle会使用搜索路径来解决非限定的同义词名称。如果有两个相同名称的同义词，同义词的非限定引用将解决搜索路径中带有指定名称的第一个同义词。如果public存在于搜索路径当中，我们就可以在那个模式中引用一个同义词，且并不需要符合那个模式名称。
+当同义词和任何其他的模式对象在一起时，POLARDB for Oracle会使用搜索路径来解决非限定的同义词名称。如果有两个相同名称的同义词，同义词的非限定引用将解决搜索路径中带有指定名称的第一个同义词。如果public存在于搜索路径当中，您可以在那个模式中引用一个同义词，且并不需要符合那个模式名称。
 
 当POLARDB for Oracle执行SQL命令时，会就同义词的基本数据库对象去检查当前用户的权限。如果用户没有该对象正确的授权，则无法执行SQL命令。
 
 ## 示例 {#section_ecs_80y_bee .section}
 
--   **创建同义词** 
+-   创建同义词
 
-    用 replace子句来替换现有的同义词定义，使之赋有新的定义。
+    用replace子句来替换现有的同义词定义，使之赋有新的定义。
 
-    使 用 public子句在public模式中创建同义词。 那么与Oracle兼 容 的 create public synonym命令会创建所属于public模式的同义词。
+    使用public子句在public模式中创建同义词。那么与Oracle兼容的create public synonym命令会创建所属于public模式的同义词。
 
     ``` {#codeblock_liq_kab_551}
     CREATE [OR REPLACE] PUBLIC SYNONYM syn_name FOR object schema.object name;
@@ -72,7 +74,7 @@ POLARDB for Oracle支持下列内容的同义词：
     CREATE SYNONYM personnel FOR enterprisedb.emp;
     ```
 
-    除非同义词在CREATE SYNONYM命令中为模式限定的，否则该同义词就会创建于搜索路径中的第一个模式中。通过执行下列命令，我们可以浏览搜索路径：
+    除非同义词在CREATE SYNONYM命令中为模式限定的，否则该同义词就会创建于搜索路径中的第一个模式中。通过执行下列命令，您可以浏览搜索路径：
 
     ``` {#codeblock_blx_b4r_sgn}
     SHOW SEARCH_PATH;
@@ -83,9 +85,9 @@ POLARDB for Oracle支持下列内容的同义词：
     (1 row)            
     ```
 
-    在我们所举的示例中，如果不存在名为development的模式，同义词则会创建于名为accounting的模式中。
+    在所举的示例中，如果不存在名为development的模式，同义词则会创建于名为accounting的模式中。
 
-    现在我们可以通过使用同义词personnel, 在任何SQL语句\(DDL或DML\)中引用模式enterprisedb中的表emp：
+    现在您可以通过使用同义词personnel，在任何SQL语句（DDL或DML）中引用模式enterprisedb中的表emp：
 
     ``` {#codeblock_02u_sov_2ve}
     INSERT INTO personnel VALUES (8142,'ANDERSON','CLERK',7902,'17-DEC-06',1300,NULL,20);
@@ -112,11 +114,11 @@ POLARDB for Oracle支持下列内容的同义词：
     (15 rows)
     ```
 
--   **删除同义词** 
+-   删除同义词
 
-    像其他可被模式限定的对象一样，可能会有两个相同名称的同义词存在于搜索路径中。我们可以包括一个模式名来明确要删除的同义词名称。除非同义词在DROP SYNONYM命令中为模式限定的，否则POLARDB for Oracle就会删除在搜索路径中发现的第一个同义词实例。
+    像其他可被模式限定的对象一样，可能会有两个相同名称的同义词存在于搜索路径中。您可以包括一个模式名来明确要删除的同义词名称。除非同义词在DROP SYNONYM命令中为模式限定的，否则POLARDB for Oracle就会删除在搜索路径中发现的第一个同义词实例。
 
-    我们可以选择性地包括PUBLIC子句来删除所属于public模式的同义词。 与Oracle兼容的DROP PUBLIC SYNONYM命令用于删除所属于public模式的同义词：
+    您可以选择性地包括PUBLIC子句来删除所属于public模式的同义词。与Oracle兼容的DROP PUBLIC SYNONYM命令用于删除所属于public模式的同义词：
 
     ``` {#codeblock_xoy_4x5_3cm}
     DROP PUBLIC SYNONYM syn_name;
