--- a/cn.zh-CN/POLARDB for PostgreSQL用户指南/账号管理/创建和使用子账号.md
+++ b/cn.zh-CN/POLARDB for PostgreSQL用户指南/账号管理/创建和使用子账号.md
@@ -4,42 +4,26 @@
 
 如果需要让其他人使用您账号下的资源，请创建子账号。
 
-## 登录RAM控制台 {#section_m66_z7t_pfi .section}
+## 创建RAM子账号 {#section_m66_z7t_pfi .section}
 
-您可以使用阿里云账号或有RAM权限的子账号来创建子账号，首先需要登陆RAM控制台。具体操作如下：
+1.  您可以使用阿里云账号或有RAM权限的子账号来创建子账号，首先需要登陆RAM控制台。具体操作如下：
+    -   如果使用阿里云账号，请[点此登录](https://account.aliyun.com/login/login.htm)。
 
--   如果使用阿里云账号，请[点此登录](https://account.aliyun.com/login/login.htm)。
-
--   如果使用子账号，请[点此登录](https://signin.aliyun.com/login.htm)。
+    -   如果使用子账号，请[点此登录](https://signin.aliyun.com/login.htm)。
 
 **说明：** 子账号登录的格式为`子账号名@公司别名`。
 
-
-## 创建RAM用户 {#section_lfn_4vi_ov8 .section}
-
-1.  在左侧导航栏的**人员管理**菜单下，单击**用户**。
-2.  单击**新建用户**。
+2.  在左侧导航栏的**人员管理**菜单下，单击**用户**。
+3.  单击**新建用户**。
 
     **说明：** 单击**添加用户**，可一次性创建多个RAM用户。
 
-3.  输入**登录名称**和**显示名称**。
-4.  在**访问方式**区域下，选择**控制台密码登录**或**编程访问**。
-
-    **说明：** 为了保障账号安全，建议仅为RAM用户选择一种登录方式，避免RAM用户离开组织后仍可以通过访问密钥访问阿里云资源。
-
-5.  单击**确认**。
-
-## 控制台密码登录 {#section_fla_l2i_bzo .section}
-
-1.  **控制台密码**选择**自动生成默认密码**或**自定义登录密码**。
-2.  **控制台密码**选择**自动生成默认密码**。
-3.  **控制台密码**选择**自定义登录密码**：输入自定义密码。
-4.  **要求重置密码**选择**用户在下次登录时必须重置密码**或**无需重置**。
-5.  **要求重置密码**选择**用户在下次登录时必须重置密码**。
-6.  **要求重置密码**选择**无需重置**。
-7.  **多因素认证**选择**要求开启MFA认证**或**不要求**。
-8.  **多因素认证**选择**要求开启MFA认证**。
-9.  **多因素认证**选择**不要求**。
+4.  输入**登录名称**和**显示名称**。
+5.  在**访问方式**区域下，选择**控制台密码登录**。
+6.  **控制台密码**选择**自动生成默认密码**或**自定义登录密码**。
+7.  **要求重置密码**选择**用户在下次登录时必须重置密码**或**无需重置**。
+8.  **多因素认证**选择**不要求**。
+9.  单击**确认**。
 
 ## 在授权页面下为RAM用户授权 {#section_gwi_ld8_aqh .section}
 
@@ -77,7 +61,7 @@
 
 -   专用登录地址：如果您可以登录[RAM控制台](https://ram.console.aliyun.com)，可以在RAM控制台查看到您公司的子账号登录地址。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3025/15645637086630_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3025/15645658566630_zh-CN.png)
 
     如果通过此地址登录，系统将自动为您填写公司别名，您只需输入子账号名。
 
