--- a/cn.zh-CN/产品定价/规格与定价.md
+++ b/cn.zh-CN/产品定价/规格与定价.md
@@ -269,7 +269,8 @@ POLARDB支持以下两种付费方式：
 
     SQL洞察按照审计日志存储的容量收取费用。
 
-    -   中国地域：0.008元/GB/小时
+    -   中国大陆地域：0.008元/GB/小时
+    -   中国香港地域：0.0122元/GB/小时
     -   境外地域：0.0122元/GB/小时
     **说明：** 审计日志的存储容量按小时扣费，不支持包年包月。
 
