--- a/cn.zh-CN/产品定价/规格与定价.md
+++ b/cn.zh-CN/产品定价/规格与定价.md
@@ -27,57 +27,82 @@ POLARDB支持以下两种付费方式：
 |[SQL洞察](#)|开启后**按小时付费**。详情请参见[SQL洞察简介](../cn.zh-CN/POLARDB for MySQL用户指南/SQL洞察.md#)。|
 |数据备份|暂不收费。|
 
-## 售价 {#section_f4v_rpg_tdb .section}
+## 存储空间价格 {#section_u9d_n9d_3jt .section}
 
--   **计算节点价格**
+存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。您可以在集群的[详情页面](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/查看数据库集群.md#)查看已使用的数据量。
 
-    POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规格均为独享型节点。独享型节点是指该节点独占所分配到的CPU、内存、存储和I/O资源，而非与其他节点共享资源，因此性能更加稳定可靠。
+-   中国大陆地域：0.00486元/GB/小时
+-   中国香港及海外地域：0.00542元/GB/小时
 
-    **说明：** POLARDB for MySQL 8.0公测中，[点此申请](https://page.aliyun.com/form/act951838896/index.htm)。
+**说明：** 
 
-    |节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|
-    |:---|:------|:-----|:----|----|------|-----|
-    |polar.mysql.x2.medium| 2核
+-   存储空间容量按小时扣费，不支持包年包月。
+-   每个集群规格都有对应的[最大存储容量](cn.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
+
+当您的数据量较大时，推荐您购买存储包，可由规定的地域内的所有集群共享使用，详情请参见[使用存储包](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/使用存储包.md#)。
+
+## SQL洞察价格 {#section_vjp_ovg_pg5 .section}
+
+SQL洞察按照审计日志存储的容量收取费用。
+
+-   中国大陆地域：0.008元/GB/小时
+-   中国香港及海外地域：0.0122元/GB/小时
+
+**说明：** 审计日志的存储容量按小时扣费，不支持包年包月。
+
+## 数据备份价格 {#section_ryg_gsw_hmu .section}
+
+POLARDB备份文件占用的存储空间暂不收费。
+
+## 计算节点价格 {#section_f4v_rpg_tdb .section}
+
+POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规格均为独享型节点。独享型节点是指该节点独占所分配到的CPU、内存、存储和I/O资源，而非与其他节点共享资源，因此性能更加稳定可靠。
+
+**说明：** POLARDB for MySQL 8.0公测中，[点此申请](https://page.aliyun.com/form/act951838896/index.htm)。
+
+|节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|
+|:---|:------|:-----|:----|----|------|-----|
+|polar.mysql.x2.medium| 2核
 
  4GB
 
  |5TB|1,200|1Gbps|8000|1Gbps|
-    |polar.mysql.x4.large| 4核
+|polar.mysql.x4.large| 4核
 
  16GB
 
  |10TB|5,000|10Gbps|32,000|4Gbps|
-    |polar.mysql.x4.xlarge| 8核
+|polar.mysql.x4.xlarge| 8核
 
  32GB
 
  |10TB|10,000|10Gbps|64,000|8Gbps|
-    |polar.mysql.x8.xlarge| 8核
+|polar.mysql.x8.xlarge| 8核
 
  64GB
 
  |30TB|10,000|10Gbps|72,000|10Gbps|
-    |polar.mysql.x8.2xlarge| 16核
+|polar.mysql.x8.2xlarge| 16核
 
  128GB
 
  |50TB|20,000|10Gbps|128,000|16Gbps|
-    |polar.mysql.x8.4xlarge| 32核
+|polar.mysql.x8.4xlarge| 32核
 
  256GB
 
  |50TB|64,000|10Gbps|192,000|24Gbps|
-    |polar.mysql.x8.12xlarge| 88核
+|polar.mysql.x8.12xlarge| 88核
 
  710GB
 
  |50TB|64,000|25Gbps|256,000|32Gbps|
 
-    **说明：** 2核4GB的集群为入门级，用于测试、体验和极小负载的场景，高负载的生产环境不建议使用。生产环境推荐使用8核32GB或以上规格的集群。
+**说明：** 2核4GB的集群为入门级，用于测试、体验和极小负载的场景，高负载的生产环境不建议使用。生产环境推荐使用8核32GB或以上规格的集群。
 
-    |节点规格|中国大陆|中国香港|新加坡|
-    |:---|----|----|---|
-    |polar.mysql.x2.medium| 280元/月
+|节点规格|中国大陆|中国香港|新加坡|
+|:---|----|----|---|
+|polar.mysql.x2.medium| 280元/月
 
  0.59元/小时
 
@@ -90,7 +115,7 @@ POLARDB支持以下两种付费方式：
  1.02元/小时
 
  |
-    |polar.mysql.x4.large| 1000元/月
+|polar.mysql.x4.large| 1000元/月
 
  2.09元/小时
 
@@ -103,7 +128,7 @@ POLARDB支持以下两种付费方式：
  3.96元/小时
 
  |
-    |polar.mysql.x4.xlarge| 2000元/月
+|polar.mysql.x4.xlarge| 2000元/月
 
  4.17元/小时
 
@@ -116,7 +141,7 @@ POLARDB支持以下两种付费方式：
  7.92元/小时
 
  |
-    |polar.mysql.x8.xlarge| 3200元/月
+|polar.mysql.x8.xlarge| 3200元/月
 
  6.67元/小时
 
@@ -129,7 +154,7 @@ POLARDB支持以下两种付费方式：
  10.00元/小时
 
  |
-    |polar.mysql.x8.2xlarge| 6400元/月
+|polar.mysql.x8.2xlarge| 6400元/月
 
  13.34元/小时
 
@@ -142,7 +167,7 @@ POLARDB支持以下两种付费方式：
  20.00元/小时
 
  |
-    |polar.mysql.x8.4xlarge| 12800元/月
+|polar.mysql.x8.4xlarge| 12800元/月
 
  26.67元/小时
 
@@ -155,7 +180,7 @@ POLARDB支持以下两种付费方式：
  40.00元/小时
 
  |
-    |polar.mysql.x8.12xlarge| 35200元/月
+|polar.mysql.x8.12xlarge| 35200元/月
 
  73.34元/小时
 
@@ -169,113 +194,89 @@ POLARDB支持以下两种付费方式：
 
  |
 
-    |节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|售价|
-    |:---|:------|:-----|:----|----|------|-----|--|
-    |polar.pg.x4.medium| 2核
+|节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|售价|
+|:---|:------|:-----|:----|----|------|-----|--|
+|polar.pg.x4.medium| 2核
 
  8GB
 
  |5TB|400|1Gbps|16,000|1Gbps|以控制台页面为准|
-    |polar.pg.x4.large| 4核
+|polar.pg.x4.large| 4核
 
  16GB
 
  |10TB|800|10Gbps|64,000|4Gbps|
-    |polar.pg.x4.xlarge| 8核
+|polar.pg.x4.xlarge| 8核
 
  32GB
 
  |10TB|1,600|10Gbps|128,000|8Gbps|
-    |polar.pg.x8.xlarge| 8核
+|polar.pg.x8.xlarge| 8核
 
  64GB
 
  |30TB|3,200|10Gbps|160,000|10Gbps|
-    |polar.pg.x8.2xlarge| 16核
+|polar.pg.x8.2xlarge| 16核
 
  128GB
 
  |50TB|6,400|10Gbps|256,000|16Gbps|
-    |polar.pg.x8.4xlarge| 32核
+|polar.pg.x8.4xlarge| 32核
 
  256GB
 
  |50TB|12,800|10Gbps|384,000|24Gbps|
-    |polar.pg.x8.12xlarge| 88核
+|polar.pg.x8.12xlarge| 88核
 
  710GB
 
  |100TB|36,000|25Gbps|512,000|32Gbps|
 
-    |节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|售价|
-    |:---|:------|:-----|:----|----|------|-----|--|
-    |polar.o.x4.medium| 2核
+|节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|售价|
+|:---|:------|:-----|:----|----|------|-----|--|
+|polar.o.x4.medium| 2核
 
  8GB
 
  |5TB|400|1Gbps|16,000|1Gbps|以控制台页面为准|
-    |polar.o.x4.large| 4核
+|polar.o.x4.large| 4核
 
  16GB
 
  |10TB|800|10Gbps|64,000|4Gbps|
-    |polar.o.x4.xlarge| 8核
+|polar.o.x4.xlarge| 8核
 
  32GB
 
  |10TB|1,600|10Gbps|128,000|8Gbps|
-    |polar.o.x8.xlarge| 8核
+|polar.o.x8.xlarge| 8核
 
  64GB
 
  |30TB|3,200|10Gbps|160,000|10Gbps|
-    |polar.o.x8.2xlarge| 16核
+|polar.o.x8.2xlarge| 16核
 
  128GB
 
  |50TB|6,400|10Gbps|256,000|16Gbps|
-    |polar.o.x8.4xlarge| 32核
+|polar.o.x8.4xlarge| 32核
 
  256GB
 
  |50TB|12,800|10Gbps|384,000|24Gbps|
-    |polar.o.x8.12xlarge| 88核
+|polar.o.x8.12xlarge| 88核
 
  710GB
 
  |100TB|36,000|25Gbps|512,000|32Gbps|
 
-    **说明：** 
+**说明：** 
 
-    -   ****以上表格中的价格为单个节点的价格，一个POLARDB集群默认包含一个主节点和一个只读节点。****
-    -   您可以在创建集群时选择主节点的规格，只读节点将采用与主节点相同的规格。
-    -   **最大IOPS**为理论换算值。
-    -   集群的最大连接数跟集群中的节点规格有关，增加节点数量并不能增加集群的连接数。
-    -   如果您需要其他计算能力和存储容量（例如**100 TB**），请通过[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)联系售后服务。
--   **存储空间价格**
-
-    存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。您可以在集群的[详情页面](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/查看数据库集群.md#)查看已使用的数据量。
-
-    -   中国大陆地域：0.00486元/GB/小时
-    -   中国香港及海外地域：0.00542元/GB/小时
-    **说明：** 
-
-    -   存储空间容量按小时扣费，不支持包年包月。
-    -   每个集群规格都有对应的[最大存储容量](cn.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
-    当您的数据量较大时，推荐您购买存储包，可由规定的地域内的所有集群共享使用，详情请参见[使用存储包](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/使用存储包.md#)。
-
--   **SQL洞察价格**
-
-    SQL洞察按照审计日志存储的容量收取费用。
-
-    -   中国大陆地域：0.008元/GB/小时
-    -   中国香港及海外地域：0.0122元/GB/小时
-    **说明：** 审计日志的存储容量按小时扣费，不支持包年包月。
-
--   **数据备份价格**
-
-    POLARDB备份文件占用的存储空间暂不收费。
-
+-   ****以上表格中的价格为单个节点的价格，一个POLARDB集群默认包含一个主节点和一个只读节点。****
+-   您可以在创建集群时选择主节点的规格，只读节点将采用与主节点相同的规格。
+-   **最大IOPS**为理论换算值。
+-   集群的最大连接数跟集群中的节点规格有关，增加节点数量并不能增加集群的连接数。
+-   如果您需要其他计算能力和存储容量（例如**100 TB**），请通过[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)联系售后服务。
 
 ## 常见问题 {#section_mxm_x1v_vfb .section}
 
