--- a/cn.zh-CN/POLARDB for MySQL用户指南/备份与恢复/恢复数据.md
+++ b/cn.zh-CN/POLARDB for MySQL用户指南/备份与恢复/恢复数据.md
@@ -5,8 +5,8 @@
 1.  将历史数据恢复到新集群中。您可以选择以下其中一种恢复方式：
     -   [按时间点恢复（恢复到任意时间点）](#)
     -   [按备份集（快照）恢复](#)
-2.  [登录到集群](../../../../cn.zh-CN/快速入门/连接数据库集群/连接数据库集群.md)，验证数据的准确性。
-3.  [将需要的数据迁移到原集群](../../../../cn.zh-CN/数据迁移__同步/从POLARDB迁移至POLARDB.md#)。
+2.  [登录到集群](../../../../cn.zh-CN/POLARDB for MySQL快速入门/连接数据库集群.md)，验证数据的准确性。
+3.  [将需要的数据迁移到原集群](../../../../cn.zh-CN/数据迁移__同步/POLARDB for MySQL/数据迁移/从POLARDB for MySQL迁移至POLARDB for MySQL.md#)。
 
 **说明：** 恢复后的集群包含原集群的数据和账号信息，不包含原集群的参数设置。
 
@@ -20,7 +20,7 @@
 4.  在左侧导航栏中，选择**配置与管理** \> **备份恢复**。
 5.  单击**按时间点恢复**，在弹出的对话框中单击**确认** 。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17710/155747460034703_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/17710/156507072934703_zh-CN.png)
 
 6.  在克隆实例页面中，选择新集群的计费方式：
     -   **预付费**：在创建集群时需要支付计算集群（一个主节点和一个只读节点）的费用，而存储空间会根据实际数据量按小时计费，并从账户中按小时扣除。如果您要长期使用该集群，**预付费**方式更加划算，而且购买时长越长，折扣越多。
@@ -33,7 +33,7 @@
     -   **网络类型**：无需修改。
     -   **VPC网络**和**VPC交换机**：建议保持不变，即原集群所在的VPC网络和交换机。
     -   **数据库引擎**：无需修改。
-    -   **节点规格**：不同规格有不同的最大存储容量和性能，具体请参见[规格与定价](../../../../cn.zh-CN/产品简介/规格与定价.md#)。
+    -   **节点规格**：不同规格有不同的最大存储容量和性能，具体请参见[规格与定价](../../../../cn.zh-CN/产品定价/规格与定价.md#)。
     -   **节点个数**：无需修改。系统将自动创建一个与主节点规格相同的只读节点。
     -   **集群名称**：如果留空，系统将为您自动生成一个集群名称。创建集群后还可以修改集群名称。
     -   **购买时长**：预付费集群需要填写此参数。
@@ -58,7 +58,7 @@
     -   **网络类型**：无需修改。
     -   **VPC网络**和**VPC交换机**：建议保持不变，即原集群所在的VPC网络和交换机。
     -   **数据库引擎**：无需修改。
-    -   **节点规格**：不同规格有不同的最大存储容量和性能，具体请参见[节点规格](../../../../cn.zh-CN/产品简介/规格与定价.md#)。
+    -   **节点规格**：不同规格有不同的最大存储容量和性能，具体请参见[节点规格](../../../../cn.zh-CN/产品定价/规格与定价.md#)。
     -   **节点个数**：无需修改。系统将自动创建一个与主节点规格相同的只读节点。
     -   **集群名称**：如果留空，系统将为您自动生成一个集群名称。创建集群后还可以修改集群名称。
     -   **购买时长**：预付费集群需要填写此参数。
@@ -80,5 +80,13 @@
 
 ## 相关主题 {#section_h21_1wt_v2b .section}
 
-[备份数据](cn.zh-CN/用户指南/备份与恢复/备份数据.md)
+[备份数据](cn.zh-CN/POLARDB for MySQL用户指南/备份与恢复/备份数据.md)
+
+## 相关API {#section_buy_wba_jkz .section}
+
+|API|描述|
+|---|--|
+|[CreateDBCluster](../../../../cn.zh-CN/API参考/集群管理/CreateDBCluster.md#)|创建POLARDB集群。 **说明：** 克隆集群时，参数**CreationOption**取值需要为**CloneFromPolarDB**。
+
+ |
 
