--- a/cn.zh-CN/POLARDB for MySQL用户指南/备份与恢复/备份数据.md
+++ b/cn.zh-CN/POLARDB for MySQL用户指南/备份与恢复/备份数据.md
@@ -23,11 +23,11 @@ POLARDB备份文件占用的存储空间暂不收费。
 
 1.  进入[POLARDB控制台](https://polardb.console.aliyun.com/)。
 2.  选择地域。
-3.  找到目标集群，单击集群名称列的**集群ID**。
+3.  找到目标集群，单击**集群名称**列的集群ID。
 4.  在左侧导航栏中，选择**配置与管理** \> **备份恢复**。
 5.  单击**备份设置**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13774/154530022111827_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13774/156507075111827_zh-CN.png)
 
 6.  在弹出的对话框中，设置自动执行备份的时间段和周期。
 
@@ -38,11 +38,11 @@ POLARDB备份文件占用的存储空间暂不收费。
 
 1.  进入[POLARDB控制台](https://polardb.console.aliyun.com/)。
 2.  选择地域。
-3.  找到目标集群，单击集群名称列的**集群ID**。
+3.  找到目标集群，单击**集群名称**列的集群ID。
 4.  在左侧导航栏中，选择**配置与管理** \> **备份恢复**。
 5.  单击**创建备份**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13774/154530022111857_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13774/156507075111857_zh-CN.png)
 
 6.  在弹出的对话框中，单击**确认**。
 
@@ -51,5 +51,15 @@ POLARDB备份文件占用的存储空间暂不收费。
 
 ## 恢复数据 {#section_tyv_cwt_v2b .section}
 
-请参见[恢复数据](cn.zh-CN/用户指南/备份与恢复/恢复数据.md)。
+请参见[恢复数据](cn.zh-CN/POLARDB for MySQL用户指南/备份与恢复/恢复数据.md)。
+
+## 相关API {#section_1aj_iwp_b1m .section}
+
+|API|描述|
+|---|--|
+|[CreateBackup](../../../../cn.zh-CN/API参考/备份管理/CreateBackup.md#)|创建POLARDB集群全量快照备份。|
+|[DescribeBackups](../../../../cn.zh-CN/API参考/备份管理/DescribeBackups.md#)|查询POLARDB集群备份信息。|
+|[DeleteBackup](../../../../cn.zh-CN/API参考/备份管理/DeleteBackup.md#)|删除POLARDB集群备份。|
+|[DescribeBackupPolicy](../../../../cn.zh-CN/API参考/备份管理/DescribeBackupPolicy.md#)|查询POLARDB集群自动备份策略。|
+|[ModifyBackupPolicy](../../../../cn.zh-CN/API参考/备份管理/ModifyBackupPolicy.md#)|修改POLARDB集群自动备份策略。|
 
