--- a/cn.zh-CN/POLARDB for MySQL快速入门/连接数据库集群.md
+++ b/cn.zh-CN/POLARDB for MySQL快速入门/连接数据库集群.md
@@ -1,63 +1,53 @@
-# 连接数据库集群 {#concept_n2f_4mq_tdb .concept}
+# 连接数据库集群 {#task_1580301 .task}
 
-本文介绍如何通过DMS和客户端连接到POLARDB for MySQL集群。
-
-## 使用DMS连接 {#section_wxq_bql_v2b .section}
-
-[数据管理](https://help.aliyun.com/product/26437.html)（Data Management Service，简称DMS）是一种集数据管理、结构管理、访问安全、BI图表、数据趋势、数据轨迹、性能与优化和服务器管理于一体的数据管理服务。支持对关系型数据库（MySQL、SQL Server、PostgreSQL等）和NoSQL数据库（MongoDB、Redis等）的管理，同时还支持Linux服务器管理。
-
-**前提条件**
+本文介绍如何通过数据管理服务DMS（Data Management Service）和通用数据库客户端连接到POLARDB for MySQL集群。
 
 已创建数据库集群的高权限账号或普通账号。具体操作请参见[创建数据库账号](cn.zh-CN/POLARDB for MySQL快速入门/创建数据库账号.md#)。
 
-**操作步骤**
+## 使用DMS连接集群 {#section_wxq_bql_v2b .section}
+
+DMS是阿里云提供的图形化的数据管理工具，它是一种集数据管理、结构管理、访问安全、BI图表、数据趋势、数据轨迹、性能与优化和服务器管理于一体的数据管理服务。支持对关系型数据库（MySQL、SQL Server、PostgreSQL等）和NoSQL数据库（MongoDB、Redis等）的管理，同时还支持Linux服务器管理。
 
 1.  找到目标集群，单击集群ID，进入基本信息页面。
-2.  单击页面右上角的**登录数据库**。
-
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3019/15639350562084_zh-CN.png)
-
-3.  在数据库登录页面，输入主地址和端口号（以英文冒号隔开），以及高权限账号或普通账号的用户名和密码，然后单击**登录**。
-
-    **说明：** DMS登录仅支持主地址，不支持集群地址。
-
-    关于如何查看连接地址，请参见[查看连接地址](cn.zh-CN/POLARDB for MySQL快速入门/查看连接地址.md)。
-
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3019/15639350562085_zh-CN.png)
+2.  单击页面右上角的**登录数据库**。![基本信息](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3019/15655909632084_zh-CN.png)
 
 
-## 使用客户端登录POLARDB {#section_pfm_qmq_tdb .section}
+3.  在数据库登录页面，输入主地址和端口号（以英文冒号隔开），以及高权限账号或普通账号的用户名和密码，然后单击**登录**。![登录页面](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3019/15655909632085_zh-CN.png)
 
-您可以使用任何通用的客户端连接POLARDB集群。本文以MySQL-Front客户端为例。
+ 
 
-单击[此处](http://www.mysqlfront.de/)下载MySQL-Front。
-
-**操作步骤**
-
-1.  将要访问POLARDB集群的客户端IP地址加入POLARDB白名单中。关于如何设置白名单，请参见[设置集群白名单](cn.zh-CN/POLARDB for MySQL快速入门/设置集群白名单.md)。
-2.  启动MySQL-Front客户端。
-3.  在**打开登录信息**窗口，单击**新建**，如下图所示。
-
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3020/15639350562088_zh-CN.png)
-
-4.  输入连接信息：
-    -   **名称**：MySQL-Front连接数据库的任务名称。若不填，则默认与Host一致。
-    -   **Host**：输入连接地址。关于如何查看和选择连接地址，请参见[查看连接地址](cn.zh-CN/POLARDB for MySQL快速入门/查看连接地址.md#)。
-
-        （**注意：**输入的连接地址不包括端口号。连接地址示例：abc.mysql.polardb.cnsh.rds.aliyuncs.com）
-
-    -   **端口**：连接地址后面的4个数字。
-    -   **用户**：POLARDB集群的账号名称。
-    -   **密码**：POLARDB集群的账号密码。
-5.  单击**确定**。
-6.  在打开**登录信息**窗口，选中刚才创建的连接，单击**打开**。
-
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3020/15639350572090_zh-CN.png)
-
-    若连接信息无误，即可成功连接POLARDB。
+    **说明：** DMS登录仅支持主地址，不支持集群地址。关于如何查看连接地址，请参见[查看连接地址](cn.zh-CN/POLARDB for MySQL快速入门/查看连接地址.md)。
 
 
-## 使用命令行连接实例 {#section_aps_qgi_pku .section}
+## 使用客户端连接集群 {#section_pfm_qmq_tdb .section}
+
+您可以使用任何通用的客户端连接POLARDB集群。本文以[HeidiSQL](https://www.heidisql.com/)为例。
+
+1.  启动HeidiSQL客户端。
+2.  在左下角单击**新建**。![会话窗口](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3019/156559096354958_zh-CN.png)
+
+
+3.  输入要连接的POLARDB集群信息，参数说明如下： 
+
+    |参数|说明|
+    |--|--|
+    |网络类型|连接数据库的形式。选择MariaDB or MySQL（TCP/IP）。|
+    |主机名/IP地址|输入POLARDB集群的私网地址或公网地址。     -   若您的客户端部署在ECS实例上，且ECS实例与要访问的POLARDB集群的地域、网络类型相同，请使用私网地址。例如ECS实例和POLARDB集群都是华东1的专有网络实例，使用私网地址连接能提供安全高效的访问。
+    -   其它情况只能使用公网地址。
+ 查看POLARDB集群的私网、公网地址及端口信息的步骤如下：     1.  登录[POLARDB控制台](https://polardb.console.aliyun.com)。
+    2.  在页面左上角，选择集群所在地域。
+    3.  找到目标集群，单击集群ID。
+    4.  在基本信息页中，即可查看私网、公网地址及其端口信息。
+ |
+    |用户|要访问POLARDB集群的账号名称。|
+    |密码|以上账号的密码。|
+    |端口|输入POLARDB集群的私网地址或公网地址对应的端口号。|
+
+4.  单击**打开**。若连接信息无误，即会成功连接集群。![HeidiSQL成功连接数据库](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3019/156559096355048_zh-CN.png)
+
+
+
+## 使用命令行连接集群 {#section_aps_qgi_pku .section}
 
 如果您的服务器安装了MySQL，可以通过命令行连接POLARDB for MySQL数据库集群，连接方式如下：
 
@@ -67,9 +57,9 @@ mysql -h<连接地址> -P<端口> -u<用户名> -p<密码> -D<数据库>
 
 |参数|说明|示例|
 |--|--|--|
-|-h|RDS实例的内网地址或外网地址。连接地址请参见[查看连接地址](cn.zh-CN/POLARDB for MySQL快速入门/查看连接地址.md#)。|`pc-bpxxxxxxxxxxxxxx.mysql.polardb.rds.aliyuncs.com`|
-|-P|POLARDB集群的端口号。 -   若使用内网连接，需输入POLARDB集群的内网端口。
--   若使用外网连接，需输入POLARDB集群的外网端口。
+|-h|POLARDB集群的私网网地址或公网地址。连接地址请参见[查看连接地址](cn.zh-CN/POLARDB for MySQL快速入门/查看连接地址.md#)。|`pc-bpxxxxxxxxxxxxxx.mysql.polardb.rds.aliyuncs.com`|
+|-P|POLARDB集群的端口号。 -   若使用私网连接，需输入POLARDB集群的私网端口。
+-   若使用公网连接，需输入POLARDB集群的公网端口。
 
  **说明：** 
 
@@ -91,5 +81,5 @@ mysql -h<连接地址> -P<端口> -u<用户名> -p<密码> -D<数据库>
 
  |`mysql`|
 
-![](images/52711_zh-CN.png "命令行连接示例")
+![示例图](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3019/156559096452711_zh-CN.png)
 
