--- a/cn.zh-CN/POLARDB for MySQL用户指南/功能动态.md
+++ b/cn.zh-CN/POLARDB for MySQL用户指南/功能动态.md
@@ -7,7 +7,7 @@
 -   为了使用最新的功能，您需要升级集群到最新的版本，升级过程有60秒左右的连接闪断，请确保业务有重连机制。
 -   如果没有显示**升级到最新版本**按钮，表示您的集群已经是最新版本。
 
-![升级到最新版本](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/961111/156514191251543_zh-CN.png)
+![升级到最新版本](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/961111/156566468651543_zh-CN.png)
 
 ## 2019年7月 {#section_c16_qv8_0zx .section}
 
@@ -19,7 +19,7 @@
 
  |2019-07-12|全部|[使用限制](../../../../cn.zh-CN/产品简介/使用限制.md#)|
 |临时升配|POLARDB可以支持您临时升级集群规格配置，应对短时间（一般小于7天）的业务高峰期。临时升级只需要支付升级期间的费用，按小时折算差价，可大幅降低活动预算。|2019-07-11|全部|[临时升配](cn.zh-CN/POLARDB for MySQL用户指南/集群管理/临时升配.md#)|
-|并行查询|POLARDB for MySQL 8.0重磅推出并行查询框架，当您的查询数据量到达一定阈值，就会自动启动并行查询框架。在存储层将数据分片到不同的线程上，多个线程并行计算，将结果流水线汇总到总线程，最后总线程做简单归并返回给用户，从而使查询耗时指数级下降。|2019-07-01|全部|[并行查询](cn.zh-CN/.md#)|
+|并行查询|POLARDB for MySQL 8.0重磅推出并行查询框架，当您的查询数据量到达一定阈值，就会自动启动并行查询框架。在存储层将数据分片到不同的线程上，多个线程并行计算，将结果流水线汇总到总线程，最后总线程做简单归并返回给用户，从而使查询耗时指数级下降。|2019-07-01|全部| |
 
 ## 2019年5月 {#section_c6x_yi3_kpm .section}
 
