--- a/cn.zh-CN/产品定价/规格与定价.md
+++ b/cn.zh-CN/产品定价/规格与定价.md
@@ -1,5 +1,7 @@
 # 规格与定价 {#concept_zbj_4pg_tdb .concept}
 
+本文介绍POLARDB的定价及节点规格。
+
 ## 付费方式 {#section_d4v_rpg_tdb .section}
 
 POLARDB支持以下两种付费方式：
@@ -194,13 +196,13 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
 
  |
 
-|节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|售价|
-|:---|:------|:-----|:----|----|------|-----|--|
+|节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|
+|:---|:------|:-----|:----|----|------|-----|
 |polar.pg.x4.medium| 2核
 
  8GB
 
- |5TB|400|1Gbps|16,000|1Gbps|以控制台页面为准|
+ |5TB|400|1Gbps|16,000|1Gbps|
 |polar.pg.x4.large| 4核
 
  16GB
@@ -232,13 +234,149 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
 
  |100TB|36,000|25Gbps|512,000|32Gbps|
 
-|节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|售价|
-|:---|:------|:-----|:----|----|------|-----|--|
+|规格|中国大陆|中国香港|美国西部|
+|--|----|----|----|
+|polar.pg.x4.medium| 5100元/年
+
+ 500元/月
+
+ 1.05元/小时
+
+ | 9690元/年
+
+ 950元/月
+
+ 1.46元/小时
+
+ | 7905元/年
+
+ 775元/月
+
+ 1.3元/小时
+
+ |
+|polar.pg.x4.large| 10200元/年
+
+ 1000元/月
+
+ 2.09元/小时
+
+ | 19380元/年
+
+ 1900元/月
+
+ 3.44元/小时
+
+ | 15810元/年
+
+ 1550元/月
+
+ 2.8元/小时
+
+ |
+|polar.pg.x4.xlarge| 20400元/年
+
+ 2000元/月
+
+ 4.17元/小时
+
+ | 38760元/年
+
+ 3800元/月
+
+ 6.87元/小时
+
+ | 31620元/年
+
+ 3100元/月
+
+ 5.6元/小时
+
+ |
+|polar.pg.x8.xlarge| 32640元/年
+
+ 3200元/月
+
+ 6.67元/小时
+
+ | 48960元/年
+
+ 4800元/月
+
+ 8.67元/小时
+
+ | 40800元/年
+
+ 4000元/月
+
+ 7.23元/小时
+
+ |
+|polar.pg.x8.2xlarge| 65280元/年
+
+ 6400元/月
+
+ 13.34元/小时
+
+ | 97920元/年
+
+ 9600元/月
+
+ 17.34元/小时
+
+ | 81600元/年
+
+ 8000元/月
+
+ 14.45元/小时
+
+ |
+|polar.pg.x8.4xlarge| 130560元/年
+
+ 12800元/月
+
+ 26.67元/小时
+
+ | 195840元/年
+
+ 19200元/月
+
+ 34.67元/小时
+
+ | 163200元/年
+
+ 16000元/月
+
+ 28.89元/小时
+
+ |
+|polar.pg.x8.12xlarge| 359040元/年
+
+ 35200元/月
+
+ 73.34元/小时
+
+ | 538560元/年
+
+ 52800元/月
+
+ 95.34元/小时
+
+ | 448800元/年
+
+ 44000元/月
+
+ 79.45元/小时
+
+ |
+
+|节点规格|CPU和内存数|最大存储容量|最大连接数|内网带宽|最大IOPS|I/O带宽|
+|:---|:------|:-----|:----|----|------|-----|
 |polar.o.x4.medium| 2核
 
  8GB
 
- |5TB|400|1Gbps|16,000|1Gbps|以控制台页面为准|
+ |5TB|400|1Gbps|16,000|1Gbps|
 |polar.o.x4.large| 4核
 
  16GB
@@ -272,21 +410,34 @@ POLARDB目前提供如下规格的节点供您选择。POLARDB的所有节点规
 
 **说明：** 
 
--   ****以上表格中的价格为单个节点的价格，一个POLARDB集群默认包含一个主节点和一个只读节点。****
 -   您可以在创建集群时选择主节点的规格，只读节点将采用与主节点相同的规格。
 -   **最大IOPS**为理论换算值。
 -   集群的最大连接数跟集群中的节点规格有关，增加节点数量并不能增加集群的连接数。
 -   如果您需要其他计算能力和存储容量（例如**100 TB**），请通过[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)联系售后服务。
 
+|规格|中国大陆|
+|包月价格|包年价格|按小时付费价格|
+|--|----|
+|----|----|-------|
+|polar.o.x2.medium|1040元|10608元|2.17元|
+|polar.o.x4.large|2080元|21216元|4.34元|
+|polar.o.x4.xlarge|4160元|42432元|8.67元|
+|polar.o.x8.xlarge|5360元|54672元|11.17元|
+|polar.o.x8.2xlarge|10720元|109344元|22.34元|
+|polar.o.x8.4xlarge|21440元|218688元|44.67元|
+|polar.o.x8.12xlarge|58960元|601392元|122.84元|
+
+**说明：** 以上表格中的价格为单个节点的价格，一个POLARDB集群默认包含一个主节点和一个只读节点。
+
 ## 常见问题 {#section_mxm_x1v_vfb .section}
 
--   **问**：如果增加一个只读节点，价格如何收费？
+-   问：如果增加一个只读节点，价格如何收费？
 
-    **答**：只读节点的价格和主节点的价格一致，请参见上面的[节点规格及售价](#)。
+    答：只读节点的价格和主节点的价格一致，请参见上面的[节点规格及售价](#)。
 
--   **问**：如果增加一个只读节点，存储容量是否会增大一倍？
+-   问：如果增加一个只读节点，存储容量是否会增大一倍？
 
-    **答**：POLARDB采用计算与存储分离的架构，购买的只读节点是计算资源，因此存储容量不会增加。
+    答：POLARDB采用计算与存储分离的架构，购买的只读节点是计算资源，因此存储容量不会增加。
 
     存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。每个集群规格都有对应的[最大存储容量](cn.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../cn.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
 
