--- a/cn.zh-CN/产品定价/规格与定价.md
+++ b/cn.zh-CN/产品定价/规格与定价.md
@@ -29,12 +29,13 @@ POLARDB支持以下两种付费方式：
 
 存储空间采用Serverless方式，购买时无需选择容量，随着数据增长而在线自动扩容，只按实际数据量大小收费。您可以在集群的[详情页面](../intl.zh-CN/POLARDB for MySQL用户指南/集群管理/查看数据库集群.md#)查看已使用的数据量。
 
--   中国大陆地域：0.00486元/GB/小时
--   中国香港及海外地域：0.00085美元/GB/小时
+|付费方式|中国大陆|中国香港|美国西部|雅加达|
+|----|----|----|----|---|
+|包月（美元/GB/月）|0.55|0.61|0.59|0.66|
+|按小时付费（美元/GB/小时）|0.00077|0.00085|0.00085|0.00085|
 
 **说明：** 
 
--   存储空间容量按小时扣费，不支持包年包月。
 -   每个集群规格都有对应的[最大存储容量](intl.zh-CN/产品定价/规格与定价.md#table_g1y_xjg_tdb)。如需提高存储容量上限，请[升级集群规格](../intl.zh-CN/POLARDB for MySQL用户指南/集群管理/变更配置.md)。
 
 当您的数据量较大时，推荐您购买存储包，可由规定的地域内的所有集群共享使用，详情请参见[使用存储包](../intl.zh-CN/POLARDB for MySQL用户指南/集群管理/使用存储包.md#)。
@@ -43,10 +44,8 @@ POLARDB支持以下两种付费方式：
 
 SQL洞察按照审计日志存储的容量收取费用。
 
--   中国大陆地域：0.008元/GB/小时
--   中国香港及海外地域：0.0019美元/GB/小时
-
-**说明：** 审计日志的存储容量按小时扣费，不支持包年包月。
+-   中国大陆地域：0.0013美元/GB/小时，0.94美元/GB/月。
+-   中国香港及海外地域：0.0019美元/GB/小时，1.37美元/GB/月。
 
 ## 数据备份价格 {#section_ryg_gsw_hmu .section}
 
