--- a/cn.zh-CN/产品定价/规格与定价.md
+++ b/cn.zh-CN/产品定价/规格与定价.md
@@ -18,8 +18,7 @@ POLARDB支持以下两种付费方式：
 |收费项|说明|
 |---|--|
 |[计算集群（主节点和只读节点）](#section_f4v_rpg_tdb)|**包年包月**或**按小时付费**。|
-|[存储空间](#section_u9d_n9d_3jt)| -   **按小时付费**。
--   预付费购买**存储包**。详情请参见[使用存储包](../intl.zh-CN/POLARDB for MySQL用户指南/集群管理/使用存储包.md#)。
+|[存储空间](#section_u9d_n9d_3jt)| **按小时付费**。
 
  |
 |[SQL洞察](#section_vjp_ovg_pg5)|开启后**按小时付费**。详情请参见[SQL洞察简介](../intl.zh-CN/POLARDB for MySQL用户指南/SQL洞察.md#)。|
