--- a/intl.zh-CN/POLARDB for MySQL用户指南/账号管理/注册和登录阿里云账号.md
+++ b/intl.zh-CN/POLARDB for MySQL用户指南/账号管理/注册和登录阿里云账号.md
@@ -6,7 +6,7 @@
 
 -   进入阿里云官网（[https://www.aliyun.com](https://www.aliyun.com/)），单击右上角的**免费注册**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3024/15662008462091_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3024/15662095452091_zh-CN.png)
 
 -   直接访问注册页面（[https://account.aliyun.com/register/register.htm](https://account.aliyun.com/register/register.htm)）。
 
@@ -14,12 +14,12 @@
 
 阿里云账号的登录入口与子账号不同。
 
--   阿里云账号的登录入口：[https://account.aliyun.com/login/login.htm](https://account.aliyun.com/login/login.htm)
+-   阿里云账号的登录入口：[https://account.aliyun.com/login/login.htm](https://account.aliyun.com/login/login.htm)。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3024/15662008462092_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3024/15662095452092_zh-CN.png)
 
 -   子账号的登录入口：[https://signin.aliyun.com/login.htm](https://signin.aliyun.com/login.htm)
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3024/15662008462093_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/3024/15662095452093_zh-CN.png)
 
 
